
{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 4051,
  "lineage": "70219929-7f0f-d14e-3f55-d312d9108bea",
  "resources": [
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_instance",
      "name": "tamr-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0c642cafba927bde2",
            "arn": "arn:aws:ec2:us-west-1:131578276461:instance/i-047846b54e9fa5d9c",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "tamr--tamr-ec2-instance-profile",
            "id": "i-047846b54e9fa5d9c",
            "instance_id": "i-047846b54e9fa5d9c",
            "instance_state": "running",
            "instance_type": "r5.2xlarge",
            "key_name": "tamr-vm-test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0e9869f115c675a8f",
            "private_dns": "ip-10-0-0-195.us-west-1.compute.internal",
            "private_ip": "10.0.0.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 300,
                "kms_key_id": "arn:aws:kms:us-west-1:131578276461:key/5d89e4a2-e049-41a7-a83a-0add63e61aca",
                "throughput": 0,
                "volume_id": "vol-04ac157e480439d63",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b81188e3083264d",
            "tags": {
              "Author": "Tamr",
              "Name": "Tamr VM",
              "owner": "franco"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03cbfc14661a33b59",
              "sg-05085835d823ab597"
            ]
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_instance",
      "name": "tamr_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0c642cafba927bde2",
            "arn": "arn:aws:ec2:us-west-1:131578276461:instance/i-047846b54e9fa5d9c",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "tamr--tamr-ec2-instance-profile",
            "id": "i-047846b54e9fa5d9c",
            "instance_id": "i-047846b54e9fa5d9c",
            "instance_state": "running",
            "instance_type": "r5.2xlarge",
            "key_name": "tamr-vm-test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0e9869f115c675a8f",
            "private_dns": "ip-10-0-0-195.us-west-1.compute.internal",
            "private_ip": "10.0.0.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 300,
                "kms_key_id": "arn:aws:kms:us-west-1:131578276461:key/5d89e4a2-e049-41a7-a83a-0add63e61aca",
                "throughput": 0,
                "volume_id": "vol-04ac157e480439d63",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b81188e3083264d",
            "tags": {
              "Author": "Tamr",
              "Name": "Tamr VM",
              "owner": "franco"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03cbfc14661a33b59",
              "sg-05085835d823ab597"
            ]
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "listeners",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dms",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/dms/b7c4e61fee879f22",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:listener-rule/app/tamr-ssl-example/1ee9e34c472f8d18/de9e8d2848054ee8/1bd40618b9f000ee",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "dms.*.*"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:131578276461:listener-rule/app/tamr-ssl-example/1ee9e34c472f8d18/de9e8d2848054ee8/1bd40618b9f000ee",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:listener/app/tamr-ssl-example/1ee9e34c472f8d18/de9e8d2848054ee8",
            "priority": 4,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ami.tamr-vm",
            "data.aws_availability_zones.available",
            "data.aws_instances.masters",
            "data.template_file.install_nginx",
            "data.template_file.setup_dms",
            "module.alb.aws_lb_target_group.target_groups",
            "module.alb.module.alb.aws_lb.this",
            "module.alb.module.alb.aws_lb_listener.frontend_https",
            "module.alb.module.alb.aws_lb_target_group.main",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-sg",
            "module.emr-logs-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-rootdir-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_hbase_config_script",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_json_config",
            "module.emr-spark.module.emr-cluster.aws_emr_cluster.emr-cluster",
            "module.emr-spark.module.emr-cluster.data.aws_s3_bucket_object.json_config",
            "module.emr-spark.module.emr-iam.aws_iam_instance_profile.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_service_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.emr_assume_role",
            "module.emr-spark.module.emr-sgs.aws_security_group.emr_managed_internal",
            "module.sg_vm_web.aws_security_group.security-groups-egress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-egress-sg",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_policy.emr_creator_minimal_policy",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emr_creator_policy_attachment",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emrfs_user_s3_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_caller_identity.current",
            "module.tamr-vm.module.aws-iam-policies.data.aws_iam_policy_document.emr_creator_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_region.current",
            "module.tamr-vm.module.aws-iam-role.aws_iam_instance_profile.tamr_user_instance_profile",
            "module.tamr-vm.module.aws-iam-role.aws_iam_role.tamr_user_iam_role",
            "module.tamr-vm.module.aws-iam-role.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.tamr-vm.module.tamr_instance.aws_instance.tamr-instance",
            "module.tamr-vm.module.tamr_instance.data.template_cloudinit_config.bootstrap-scripts",
            "module.tamr_networking.aws_network_acl.application_subnet",
            "module.tamr_networking.aws_network_acl.compute_subnet",
            "module.tamr_networking.aws_network_acl.data_subnets",
            "module.tamr_networking.aws_network_acl.load_balancing_subnets",
            "module.tamr_networking.aws_network_acl.public_subnets",
            "module.tamr_networking.aws_route_table_association.compute_subnet_rta",
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.data.aws_region.current",
            "module.tamr_networking.data.aws_route_table.application_subnet_rt",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.endpoints.aws_vpc_endpoint.this",
            "module.tamr_networking.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tamr_networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.tamr_networking.module.vpc.aws_customer_gateway.this",
            "module.tamr_networking.module.vpc.aws_db_subnet_group.database",
            "module.tamr_networking.module.vpc.aws_default_network_acl.this",
            "module.tamr_networking.module.vpc.aws_default_route_table.default",
            "module.tamr_networking.module.vpc.aws_default_security_group.this",
            "module.tamr_networking.module.vpc.aws_default_vpc.this",
            "module.tamr_networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.tamr_networking.module.vpc.aws_flow_log.this",
            "module.tamr_networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_nat_gateway.this",
            "module.tamr_networking.module.vpc.aws_network_acl.database",
            "module.tamr_networking.module.vpc.aws_network_acl.elasticache",
            "module.tamr_networking.module.vpc.aws_network_acl.intra",
            "module.tamr_networking.module.vpc.aws_network_acl.outpost",
            "module.tamr_networking.module.vpc.aws_network_acl.private",
            "module.tamr_networking.module.vpc.aws_network_acl.public",
            "module.tamr_networking.module.vpc.aws_network_acl.redshift",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.tamr_networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.tamr_networking.module.vpc.aws_route.database_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.database_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.database_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.private_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.private_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.tamr_networking.module.vpc.aws_route_table.database",
            "module.tamr_networking.module.vpc.aws_route_table.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_route_table.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.database",
            "module.tamr_networking.module.vpc.aws_route_table_association.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table_association.intra",
            "module.tamr_networking.module.vpc.aws_route_table_association.outpost",
            "module.tamr_networking.module.vpc.aws_route_table_association.private",
            "module.tamr_networking.module.vpc.aws_route_table_association.public",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift_public",
            "module.tamr_networking.module.vpc.aws_subnet.database",
            "module.tamr_networking.module.vpc.aws_subnet.elasticache",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_subnet.outpost",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_subnet.redshift",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        },
        {
          "index_key": "ganglia",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/ganglia/c250e5ec0d3865d9",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:listener-rule/app/tamr-ssl-example/1ee9e34c472f8d18/de9e8d2848054ee8/60335df85a788e83",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "ganglia.*.*"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:131578276461:listener-rule/app/tamr-ssl-example/1ee9e34c472f8d18/de9e8d2848054ee8/60335df85a788e83",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:listener/app/tamr-ssl-example/1ee9e34c472f8d18/de9e8d2848054ee8",
            "priority": 3,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ami.tamr-vm",
            "data.aws_availability_zones.available",
            "data.aws_instances.masters",
            "data.template_file.install_nginx",
            "data.template_file.setup_dms",
            "module.alb.aws_lb_target_group.target_groups",
            "module.alb.module.alb.aws_lb.this",
            "module.alb.module.alb.aws_lb_listener.frontend_https",
            "module.alb.module.alb.aws_lb_target_group.main",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-sg",
            "module.emr-logs-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-rootdir-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_hbase_config_script",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_json_config",
            "module.emr-spark.module.emr-cluster.aws_emr_cluster.emr-cluster",
            "module.emr-spark.module.emr-cluster.data.aws_s3_bucket_object.json_config",
            "module.emr-spark.module.emr-iam.aws_iam_instance_profile.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_service_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.emr_assume_role",
            "module.emr-spark.module.emr-sgs.aws_security_group.emr_managed_internal",
            "module.sg_vm_web.aws_security_group.security-groups-egress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-egress-sg",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_policy.emr_creator_minimal_policy",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emr_creator_policy_attachment",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emrfs_user_s3_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_caller_identity.current",
            "module.tamr-vm.module.aws-iam-policies.data.aws_iam_policy_document.emr_creator_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_region.current",
            "module.tamr-vm.module.aws-iam-role.aws_iam_instance_profile.tamr_user_instance_profile",
            "module.tamr-vm.module.aws-iam-role.aws_iam_role.tamr_user_iam_role",
            "module.tamr-vm.module.aws-iam-role.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.tamr-vm.module.tamr_instance.aws_instance.tamr-instance",
            "module.tamr-vm.module.tamr_instance.data.template_cloudinit_config.bootstrap-scripts",
            "module.tamr_networking.aws_network_acl.application_subnet",
            "module.tamr_networking.aws_network_acl.compute_subnet",
            "module.tamr_networking.aws_network_acl.data_subnets",
            "module.tamr_networking.aws_network_acl.load_balancing_subnets",
            "module.tamr_networking.aws_network_acl.public_subnets",
            "module.tamr_networking.aws_route_table_association.compute_subnet_rta",
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.data.aws_region.current",
            "module.tamr_networking.data.aws_route_table.application_subnet_rt",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.endpoints.aws_vpc_endpoint.this",
            "module.tamr_networking.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tamr_networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.tamr_networking.module.vpc.aws_customer_gateway.this",
            "module.tamr_networking.module.vpc.aws_db_subnet_group.database",
            "module.tamr_networking.module.vpc.aws_default_network_acl.this",
            "module.tamr_networking.module.vpc.aws_default_route_table.default",
            "module.tamr_networking.module.vpc.aws_default_security_group.this",
            "module.tamr_networking.module.vpc.aws_default_vpc.this",
            "module.tamr_networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.tamr_networking.module.vpc.aws_flow_log.this",
            "module.tamr_networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_nat_gateway.this",
            "module.tamr_networking.module.vpc.aws_network_acl.database",
            "module.tamr_networking.module.vpc.aws_network_acl.elasticache",
            "module.tamr_networking.module.vpc.aws_network_acl.intra",
            "module.tamr_networking.module.vpc.aws_network_acl.outpost",
            "module.tamr_networking.module.vpc.aws_network_acl.private",
            "module.tamr_networking.module.vpc.aws_network_acl.public",
            "module.tamr_networking.module.vpc.aws_network_acl.redshift",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.tamr_networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.tamr_networking.module.vpc.aws_route.database_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.database_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.database_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.private_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.private_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.tamr_networking.module.vpc.aws_route_table.database",
            "module.tamr_networking.module.vpc.aws_route_table.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_route_table.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.database",
            "module.tamr_networking.module.vpc.aws_route_table_association.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table_association.intra",
            "module.tamr_networking.module.vpc.aws_route_table_association.outpost",
            "module.tamr_networking.module.vpc.aws_route_table_association.private",
            "module.tamr_networking.module.vpc.aws_route_table_association.public",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift_public",
            "module.tamr_networking.module.vpc.aws_subnet.database",
            "module.tamr_networking.module.vpc.aws_subnet.elasticache",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_subnet.outpost",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_subnet.redshift",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        },
        {
          "index_key": "hbase",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/hbase/323d5bea025d6e83",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:listener-rule/app/tamr-ssl-example/1ee9e34c472f8d18/de9e8d2848054ee8/33f3faf8a1cf9d2c",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "hbase.*.*"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:131578276461:listener-rule/app/tamr-ssl-example/1ee9e34c472f8d18/de9e8d2848054ee8/33f3faf8a1cf9d2c",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:listener/app/tamr-ssl-example/1ee9e34c472f8d18/de9e8d2848054ee8",
            "priority": 2,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ami.tamr-vm",
            "data.aws_availability_zones.available",
            "data.aws_instances.masters",
            "data.template_file.install_nginx",
            "data.template_file.setup_dms",
            "module.alb.aws_lb_target_group.target_groups",
            "module.alb.module.alb.aws_lb.this",
            "module.alb.module.alb.aws_lb_listener.frontend_https",
            "module.alb.module.alb.aws_lb_target_group.main",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-sg",
            "module.emr-logs-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-rootdir-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_hbase_config_script",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_json_config",
            "module.emr-spark.module.emr-cluster.aws_emr_cluster.emr-cluster",
            "module.emr-spark.module.emr-cluster.data.aws_s3_bucket_object.json_config",
            "module.emr-spark.module.emr-iam.aws_iam_instance_profile.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_service_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.emr_assume_role",
            "module.emr-spark.module.emr-sgs.aws_security_group.emr_managed_internal",
            "module.sg_vm_web.aws_security_group.security-groups-egress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-egress-sg",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_policy.emr_creator_minimal_policy",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emr_creator_policy_attachment",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emrfs_user_s3_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_caller_identity.current",
            "module.tamr-vm.module.aws-iam-policies.data.aws_iam_policy_document.emr_creator_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_region.current",
            "module.tamr-vm.module.aws-iam-role.aws_iam_instance_profile.tamr_user_instance_profile",
            "module.tamr-vm.module.aws-iam-role.aws_iam_role.tamr_user_iam_role",
            "module.tamr-vm.module.aws-iam-role.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.tamr-vm.module.tamr_instance.aws_instance.tamr-instance",
            "module.tamr-vm.module.tamr_instance.data.template_cloudinit_config.bootstrap-scripts",
            "module.tamr_networking.aws_network_acl.application_subnet",
            "module.tamr_networking.aws_network_acl.compute_subnet",
            "module.tamr_networking.aws_network_acl.data_subnets",
            "module.tamr_networking.aws_network_acl.load_balancing_subnets",
            "module.tamr_networking.aws_network_acl.public_subnets",
            "module.tamr_networking.aws_route_table_association.compute_subnet_rta",
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.data.aws_region.current",
            "module.tamr_networking.data.aws_route_table.application_subnet_rt",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.endpoints.aws_vpc_endpoint.this",
            "module.tamr_networking.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tamr_networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.tamr_networking.module.vpc.aws_customer_gateway.this",
            "module.tamr_networking.module.vpc.aws_db_subnet_group.database",
            "module.tamr_networking.module.vpc.aws_default_network_acl.this",
            "module.tamr_networking.module.vpc.aws_default_route_table.default",
            "module.tamr_networking.module.vpc.aws_default_security_group.this",
            "module.tamr_networking.module.vpc.aws_default_vpc.this",
            "module.tamr_networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.tamr_networking.module.vpc.aws_flow_log.this",
            "module.tamr_networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_nat_gateway.this",
            "module.tamr_networking.module.vpc.aws_network_acl.database",
            "module.tamr_networking.module.vpc.aws_network_acl.elasticache",
            "module.tamr_networking.module.vpc.aws_network_acl.intra",
            "module.tamr_networking.module.vpc.aws_network_acl.outpost",
            "module.tamr_networking.module.vpc.aws_network_acl.private",
            "module.tamr_networking.module.vpc.aws_network_acl.public",
            "module.tamr_networking.module.vpc.aws_network_acl.redshift",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.tamr_networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.tamr_networking.module.vpc.aws_route.database_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.database_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.database_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.private_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.private_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.tamr_networking.module.vpc.aws_route_table.database",
            "module.tamr_networking.module.vpc.aws_route_table.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_route_table.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.database",
            "module.tamr_networking.module.vpc.aws_route_table_association.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table_association.intra",
            "module.tamr_networking.module.vpc.aws_route_table_association.outpost",
            "module.tamr_networking.module.vpc.aws_route_table_association.private",
            "module.tamr_networking.module.vpc.aws_route_table_association.public",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift_public",
            "module.tamr_networking.module.vpc.aws_subnet.database",
            "module.tamr_networking.module.vpc.aws_subnet.elasticache",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_subnet.outpost",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_subnet.redshift",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        },
        {
          "index_key": "spark",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/spark/02da05590282d981",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:listener-rule/app/tamr-ssl-example/1ee9e34c472f8d18/de9e8d2848054ee8/8edb9318d780b2dd",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "spark.*.*"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:131578276461:listener-rule/app/tamr-ssl-example/1ee9e34c472f8d18/de9e8d2848054ee8/8edb9318d780b2dd",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:listener/app/tamr-ssl-example/1ee9e34c472f8d18/de9e8d2848054ee8",
            "priority": 5,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ami.tamr-vm",
            "data.aws_availability_zones.available",
            "data.aws_instances.masters",
            "data.template_file.install_nginx",
            "data.template_file.setup_dms",
            "module.alb.aws_lb_target_group.target_groups",
            "module.alb.module.alb.aws_lb.this",
            "module.alb.module.alb.aws_lb_listener.frontend_https",
            "module.alb.module.alb.aws_lb_target_group.main",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-sg",
            "module.emr-logs-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-rootdir-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_hbase_config_script",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_json_config",
            "module.emr-spark.module.emr-cluster.aws_emr_cluster.emr-cluster",
            "module.emr-spark.module.emr-cluster.data.aws_s3_bucket_object.json_config",
            "module.emr-spark.module.emr-iam.aws_iam_instance_profile.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_service_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.emr_assume_role",
            "module.emr-spark.module.emr-sgs.aws_security_group.emr_managed_internal",
            "module.sg_vm_web.aws_security_group.security-groups-egress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-egress-sg",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_policy.emr_creator_minimal_policy",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emr_creator_policy_attachment",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emrfs_user_s3_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_caller_identity.current",
            "module.tamr-vm.module.aws-iam-policies.data.aws_iam_policy_document.emr_creator_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_region.current",
            "module.tamr-vm.module.aws-iam-role.aws_iam_instance_profile.tamr_user_instance_profile",
            "module.tamr-vm.module.aws-iam-role.aws_iam_role.tamr_user_iam_role",
            "module.tamr-vm.module.aws-iam-role.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.tamr-vm.module.tamr_instance.aws_instance.tamr-instance",
            "module.tamr-vm.module.tamr_instance.data.template_cloudinit_config.bootstrap-scripts",
            "module.tamr_networking.aws_network_acl.application_subnet",
            "module.tamr_networking.aws_network_acl.compute_subnet",
            "module.tamr_networking.aws_network_acl.data_subnets",
            "module.tamr_networking.aws_network_acl.load_balancing_subnets",
            "module.tamr_networking.aws_network_acl.public_subnets",
            "module.tamr_networking.aws_route_table_association.compute_subnet_rta",
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.data.aws_region.current",
            "module.tamr_networking.data.aws_route_table.application_subnet_rt",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.endpoints.aws_vpc_endpoint.this",
            "module.tamr_networking.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tamr_networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.tamr_networking.module.vpc.aws_customer_gateway.this",
            "module.tamr_networking.module.vpc.aws_db_subnet_group.database",
            "module.tamr_networking.module.vpc.aws_default_network_acl.this",
            "module.tamr_networking.module.vpc.aws_default_route_table.default",
            "module.tamr_networking.module.vpc.aws_default_security_group.this",
            "module.tamr_networking.module.vpc.aws_default_vpc.this",
            "module.tamr_networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.tamr_networking.module.vpc.aws_flow_log.this",
            "module.tamr_networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_nat_gateway.this",
            "module.tamr_networking.module.vpc.aws_network_acl.database",
            "module.tamr_networking.module.vpc.aws_network_acl.elasticache",
            "module.tamr_networking.module.vpc.aws_network_acl.intra",
            "module.tamr_networking.module.vpc.aws_network_acl.outpost",
            "module.tamr_networking.module.vpc.aws_network_acl.private",
            "module.tamr_networking.module.vpc.aws_network_acl.public",
            "module.tamr_networking.module.vpc.aws_network_acl.redshift",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.tamr_networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.tamr_networking.module.vpc.aws_route.database_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.database_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.database_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.private_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.private_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.tamr_networking.module.vpc.aws_route_table.database",
            "module.tamr_networking.module.vpc.aws_route_table.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_route_table.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.database",
            "module.tamr_networking.module.vpc.aws_route_table_association.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table_association.intra",
            "module.tamr_networking.module.vpc.aws_route_table_association.outpost",
            "module.tamr_networking.module.vpc.aws_route_table_association.private",
            "module.tamr_networking.module.vpc.aws_route_table_association.public",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift_public",
            "module.tamr_networking.module.vpc.aws_subnet.database",
            "module.tamr_networking.module.vpc.aws_subnet.elasticache",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_subnet.outpost",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_subnet.redshift",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        },
        {
          "index_key": "tamr",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/tamr/66abb686ef200f12",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:listener-rule/app/tamr-ssl-example/1ee9e34c472f8d18/de9e8d2848054ee8/ae6a5639f2425bc3",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tamr.*.*"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:131578276461:listener-rule/app/tamr-ssl-example/1ee9e34c472f8d18/de9e8d2848054ee8/ae6a5639f2425bc3",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:listener/app/tamr-ssl-example/1ee9e34c472f8d18/de9e8d2848054ee8",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ami.tamr-vm",
            "data.aws_availability_zones.available",
            "data.aws_instances.masters",
            "data.template_file.install_nginx",
            "data.template_file.setup_dms",
            "module.alb.aws_lb_target_group.target_groups",
            "module.alb.module.alb.aws_lb.this",
            "module.alb.module.alb.aws_lb_listener.frontend_https",
            "module.alb.module.alb.aws_lb_target_group.main",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-sg",
            "module.emr-logs-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-rootdir-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_hbase_config_script",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_json_config",
            "module.emr-spark.module.emr-cluster.aws_emr_cluster.emr-cluster",
            "module.emr-spark.module.emr-cluster.data.aws_s3_bucket_object.json_config",
            "module.emr-spark.module.emr-iam.aws_iam_instance_profile.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_service_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.emr_assume_role",
            "module.emr-spark.module.emr-sgs.aws_security_group.emr_managed_internal",
            "module.sg_vm_web.aws_security_group.security-groups-egress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-egress-sg",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_policy.emr_creator_minimal_policy",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emr_creator_policy_attachment",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emrfs_user_s3_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_caller_identity.current",
            "module.tamr-vm.module.aws-iam-policies.data.aws_iam_policy_document.emr_creator_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_region.current",
            "module.tamr-vm.module.aws-iam-role.aws_iam_instance_profile.tamr_user_instance_profile",
            "module.tamr-vm.module.aws-iam-role.aws_iam_role.tamr_user_iam_role",
            "module.tamr-vm.module.aws-iam-role.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.tamr-vm.module.tamr_instance.aws_instance.tamr-instance",
            "module.tamr-vm.module.tamr_instance.data.template_cloudinit_config.bootstrap-scripts",
            "module.tamr_networking.aws_network_acl.application_subnet",
            "module.tamr_networking.aws_network_acl.compute_subnet",
            "module.tamr_networking.aws_network_acl.data_subnets",
            "module.tamr_networking.aws_network_acl.load_balancing_subnets",
            "module.tamr_networking.aws_network_acl.public_subnets",
            "module.tamr_networking.aws_route_table_association.compute_subnet_rta",
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.data.aws_region.current",
            "module.tamr_networking.data.aws_route_table.application_subnet_rt",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.endpoints.aws_vpc_endpoint.this",
            "module.tamr_networking.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tamr_networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.tamr_networking.module.vpc.aws_customer_gateway.this",
            "module.tamr_networking.module.vpc.aws_db_subnet_group.database",
            "module.tamr_networking.module.vpc.aws_default_network_acl.this",
            "module.tamr_networking.module.vpc.aws_default_route_table.default",
            "module.tamr_networking.module.vpc.aws_default_security_group.this",
            "module.tamr_networking.module.vpc.aws_default_vpc.this",
            "module.tamr_networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.tamr_networking.module.vpc.aws_flow_log.this",
            "module.tamr_networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_nat_gateway.this",
            "module.tamr_networking.module.vpc.aws_network_acl.database",
            "module.tamr_networking.module.vpc.aws_network_acl.elasticache",
            "module.tamr_networking.module.vpc.aws_network_acl.intra",
            "module.tamr_networking.module.vpc.aws_network_acl.outpost",
            "module.tamr_networking.module.vpc.aws_network_acl.private",
            "module.tamr_networking.module.vpc.aws_network_acl.public",
            "module.tamr_networking.module.vpc.aws_network_acl.redshift",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.tamr_networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.tamr_networking.module.vpc.aws_route.database_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.database_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.database_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.private_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.private_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.tamr_networking.module.vpc.aws_route_table.database",
            "module.tamr_networking.module.vpc.aws_route_table.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_route_table.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.database",
            "module.tamr_networking.module.vpc.aws_route_table_association.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table_association.intra",
            "module.tamr_networking.module.vpc.aws_route_table_association.outpost",
            "module.tamr_networking.module.vpc.aws_route_table_association.private",
            "module.tamr_networking.module.vpc.aws_route_table_association.public",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift_public",
            "module.tamr_networking.module.vpc.aws_subnet.database",
            "module.tamr_networking.module.vpc.aws_subnet.elasticache",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_subnet.outpost",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_subnet.redshift",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dms",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/dms/b7c4e61fee879f22",
            "arn_suffix": "targetgroup/dms/b7c4e61fee879f22",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/dms/b7c4e61fee879f22",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "dms",
            "port": 9155,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "dependencies": [
            "data.aws_ami.tamr-vm",
            "data.aws_availability_zones.available",
            "data.aws_instances.masters",
            "data.template_file.install_nginx",
            "data.template_file.setup_dms",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-sg",
            "module.emr-logs-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-rootdir-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_hbase_config_script",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_json_config",
            "module.emr-spark.module.emr-cluster.aws_emr_cluster.emr-cluster",
            "module.emr-spark.module.emr-cluster.data.aws_s3_bucket_object.json_config",
            "module.emr-spark.module.emr-iam.aws_iam_instance_profile.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_service_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.emr_assume_role",
            "module.emr-spark.module.emr-sgs.aws_security_group.emr_managed_internal",
            "module.sg_vm_web.aws_security_group.security-groups-egress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-egress-sg",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_policy.emr_creator_minimal_policy",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emr_creator_policy_attachment",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emrfs_user_s3_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_caller_identity.current",
            "module.tamr-vm.module.aws-iam-policies.data.aws_iam_policy_document.emr_creator_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_region.current",
            "module.tamr-vm.module.aws-iam-role.aws_iam_instance_profile.tamr_user_instance_profile",
            "module.tamr-vm.module.aws-iam-role.aws_iam_role.tamr_user_iam_role",
            "module.tamr-vm.module.aws-iam-role.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.tamr-vm.module.tamr_instance.aws_instance.tamr-instance",
            "module.tamr-vm.module.tamr_instance.data.template_cloudinit_config.bootstrap-scripts",
            "module.tamr_networking.aws_network_acl.application_subnet",
            "module.tamr_networking.aws_network_acl.compute_subnet",
            "module.tamr_networking.aws_network_acl.data_subnets",
            "module.tamr_networking.aws_network_acl.load_balancing_subnets",
            "module.tamr_networking.aws_network_acl.public_subnets",
            "module.tamr_networking.aws_route_table_association.compute_subnet_rta",
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.data.aws_region.current",
            "module.tamr_networking.data.aws_route_table.application_subnet_rt",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.endpoints.aws_vpc_endpoint.this",
            "module.tamr_networking.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tamr_networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.tamr_networking.module.vpc.aws_customer_gateway.this",
            "module.tamr_networking.module.vpc.aws_db_subnet_group.database",
            "module.tamr_networking.module.vpc.aws_default_network_acl.this",
            "module.tamr_networking.module.vpc.aws_default_route_table.default",
            "module.tamr_networking.module.vpc.aws_default_security_group.this",
            "module.tamr_networking.module.vpc.aws_default_vpc.this",
            "module.tamr_networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.tamr_networking.module.vpc.aws_flow_log.this",
            "module.tamr_networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_nat_gateway.this",
            "module.tamr_networking.module.vpc.aws_network_acl.database",
            "module.tamr_networking.module.vpc.aws_network_acl.elasticache",
            "module.tamr_networking.module.vpc.aws_network_acl.intra",
            "module.tamr_networking.module.vpc.aws_network_acl.outpost",
            "module.tamr_networking.module.vpc.aws_network_acl.private",
            "module.tamr_networking.module.vpc.aws_network_acl.public",
            "module.tamr_networking.module.vpc.aws_network_acl.redshift",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.tamr_networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.tamr_networking.module.vpc.aws_route.database_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.database_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.database_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.private_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.private_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.tamr_networking.module.vpc.aws_route_table.database",
            "module.tamr_networking.module.vpc.aws_route_table.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_route_table.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.database",
            "module.tamr_networking.module.vpc.aws_route_table_association.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table_association.intra",
            "module.tamr_networking.module.vpc.aws_route_table_association.outpost",
            "module.tamr_networking.module.vpc.aws_route_table_association.private",
            "module.tamr_networking.module.vpc.aws_route_table_association.public",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift_public",
            "module.tamr_networking.module.vpc.aws_subnet.database",
            "module.tamr_networking.module.vpc.aws_subnet.elasticache",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_subnet.outpost",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_subnet.redshift",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        },
        {
          "index_key": "ganglia",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/ganglia/c250e5ec0d3865d9",
            "arn_suffix": "targetgroup/ganglia/c250e5ec0d3865d9",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/ganglia/c250e5ec0d3865d9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ganglia",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "dependencies": [
            "data.aws_ami.tamr-vm",
            "data.aws_availability_zones.available",
            "data.aws_instances.masters",
            "data.template_file.install_nginx",
            "data.template_file.setup_dms",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-sg",
            "module.emr-logs-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-rootdir-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_hbase_config_script",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_json_config",
            "module.emr-spark.module.emr-cluster.aws_emr_cluster.emr-cluster",
            "module.emr-spark.module.emr-cluster.data.aws_s3_bucket_object.json_config",
            "module.emr-spark.module.emr-iam.aws_iam_instance_profile.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_service_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.emr_assume_role",
            "module.emr-spark.module.emr-sgs.aws_security_group.emr_managed_internal",
            "module.sg_vm_web.aws_security_group.security-groups-egress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-egress-sg",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_policy.emr_creator_minimal_policy",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emr_creator_policy_attachment",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emrfs_user_s3_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_caller_identity.current",
            "module.tamr-vm.module.aws-iam-policies.data.aws_iam_policy_document.emr_creator_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_region.current",
            "module.tamr-vm.module.aws-iam-role.aws_iam_instance_profile.tamr_user_instance_profile",
            "module.tamr-vm.module.aws-iam-role.aws_iam_role.tamr_user_iam_role",
            "module.tamr-vm.module.aws-iam-role.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.tamr-vm.module.tamr_instance.aws_instance.tamr-instance",
            "module.tamr-vm.module.tamr_instance.data.template_cloudinit_config.bootstrap-scripts",
            "module.tamr_networking.aws_network_acl.application_subnet",
            "module.tamr_networking.aws_network_acl.compute_subnet",
            "module.tamr_networking.aws_network_acl.data_subnets",
            "module.tamr_networking.aws_network_acl.load_balancing_subnets",
            "module.tamr_networking.aws_network_acl.public_subnets",
            "module.tamr_networking.aws_route_table_association.compute_subnet_rta",
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.data.aws_region.current",
            "module.tamr_networking.data.aws_route_table.application_subnet_rt",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.endpoints.aws_vpc_endpoint.this",
            "module.tamr_networking.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tamr_networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.tamr_networking.module.vpc.aws_customer_gateway.this",
            "module.tamr_networking.module.vpc.aws_db_subnet_group.database",
            "module.tamr_networking.module.vpc.aws_default_network_acl.this",
            "module.tamr_networking.module.vpc.aws_default_route_table.default",
            "module.tamr_networking.module.vpc.aws_default_security_group.this",
            "module.tamr_networking.module.vpc.aws_default_vpc.this",
            "module.tamr_networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.tamr_networking.module.vpc.aws_flow_log.this",
            "module.tamr_networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_nat_gateway.this",
            "module.tamr_networking.module.vpc.aws_network_acl.database",
            "module.tamr_networking.module.vpc.aws_network_acl.elasticache",
            "module.tamr_networking.module.vpc.aws_network_acl.intra",
            "module.tamr_networking.module.vpc.aws_network_acl.outpost",
            "module.tamr_networking.module.vpc.aws_network_acl.private",
            "module.tamr_networking.module.vpc.aws_network_acl.public",
            "module.tamr_networking.module.vpc.aws_network_acl.redshift",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.tamr_networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.tamr_networking.module.vpc.aws_route.database_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.database_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.database_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.private_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.private_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.tamr_networking.module.vpc.aws_route_table.database",
            "module.tamr_networking.module.vpc.aws_route_table.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_route_table.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.database",
            "module.tamr_networking.module.vpc.aws_route_table_association.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table_association.intra",
            "module.tamr_networking.module.vpc.aws_route_table_association.outpost",
            "module.tamr_networking.module.vpc.aws_route_table_association.private",
            "module.tamr_networking.module.vpc.aws_route_table_association.public",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift_public",
            "module.tamr_networking.module.vpc.aws_subnet.database",
            "module.tamr_networking.module.vpc.aws_subnet.elasticache",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_subnet.outpost",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_subnet.redshift",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        },
        {
          "index_key": "hbase",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/hbase/323d5bea025d6e83",
            "arn_suffix": "targetgroup/hbase/323d5bea025d6e83",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/hbase/323d5bea025d6e83",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "hbase",
            "port": 16010,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "dependencies": [
            "data.aws_ami.tamr-vm",
            "data.aws_availability_zones.available",
            "data.aws_instances.masters",
            "data.template_file.install_nginx",
            "data.template_file.setup_dms",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-sg",
            "module.emr-logs-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-rootdir-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_hbase_config_script",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_json_config",
            "module.emr-spark.module.emr-cluster.aws_emr_cluster.emr-cluster",
            "module.emr-spark.module.emr-cluster.data.aws_s3_bucket_object.json_config",
            "module.emr-spark.module.emr-iam.aws_iam_instance_profile.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_service_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.emr_assume_role",
            "module.emr-spark.module.emr-sgs.aws_security_group.emr_managed_internal",
            "module.sg_vm_web.aws_security_group.security-groups-egress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-egress-sg",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_policy.emr_creator_minimal_policy",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emr_creator_policy_attachment",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emrfs_user_s3_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_caller_identity.current",
            "module.tamr-vm.module.aws-iam-policies.data.aws_iam_policy_document.emr_creator_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_region.current",
            "module.tamr-vm.module.aws-iam-role.aws_iam_instance_profile.tamr_user_instance_profile",
            "module.tamr-vm.module.aws-iam-role.aws_iam_role.tamr_user_iam_role",
            "module.tamr-vm.module.aws-iam-role.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.tamr-vm.module.tamr_instance.aws_instance.tamr-instance",
            "module.tamr-vm.module.tamr_instance.data.template_cloudinit_config.bootstrap-scripts",
            "module.tamr_networking.aws_network_acl.application_subnet",
            "module.tamr_networking.aws_network_acl.compute_subnet",
            "module.tamr_networking.aws_network_acl.data_subnets",
            "module.tamr_networking.aws_network_acl.load_balancing_subnets",
            "module.tamr_networking.aws_network_acl.public_subnets",
            "module.tamr_networking.aws_route_table_association.compute_subnet_rta",
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.data.aws_region.current",
            "module.tamr_networking.data.aws_route_table.application_subnet_rt",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.endpoints.aws_vpc_endpoint.this",
            "module.tamr_networking.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tamr_networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.tamr_networking.module.vpc.aws_customer_gateway.this",
            "module.tamr_networking.module.vpc.aws_db_subnet_group.database",
            "module.tamr_networking.module.vpc.aws_default_network_acl.this",
            "module.tamr_networking.module.vpc.aws_default_route_table.default",
            "module.tamr_networking.module.vpc.aws_default_security_group.this",
            "module.tamr_networking.module.vpc.aws_default_vpc.this",
            "module.tamr_networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.tamr_networking.module.vpc.aws_flow_log.this",
            "module.tamr_networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_nat_gateway.this",
            "module.tamr_networking.module.vpc.aws_network_acl.database",
            "module.tamr_networking.module.vpc.aws_network_acl.elasticache",
            "module.tamr_networking.module.vpc.aws_network_acl.intra",
            "module.tamr_networking.module.vpc.aws_network_acl.outpost",
            "module.tamr_networking.module.vpc.aws_network_acl.private",
            "module.tamr_networking.module.vpc.aws_network_acl.public",
            "module.tamr_networking.module.vpc.aws_network_acl.redshift",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.tamr_networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.tamr_networking.module.vpc.aws_route.database_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.database_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.database_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.private_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.private_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.tamr_networking.module.vpc.aws_route_table.database",
            "module.tamr_networking.module.vpc.aws_route_table.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_route_table.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.database",
            "module.tamr_networking.module.vpc.aws_route_table_association.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table_association.intra",
            "module.tamr_networking.module.vpc.aws_route_table_association.outpost",
            "module.tamr_networking.module.vpc.aws_route_table_association.private",
            "module.tamr_networking.module.vpc.aws_route_table_association.public",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift_public",
            "module.tamr_networking.module.vpc.aws_subnet.database",
            "module.tamr_networking.module.vpc.aws_subnet.elasticache",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_subnet.outpost",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_subnet.redshift",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        },
        {
          "index_key": "spark",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/spark/02da05590282d981",
            "arn_suffix": "targetgroup/spark/02da05590282d981",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/spark/02da05590282d981",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "spark",
            "port": 18080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "dependencies": [
            "data.aws_ami.tamr-vm",
            "data.aws_availability_zones.available",
            "data.aws_instances.masters",
            "data.template_file.install_nginx",
            "data.template_file.setup_dms",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-sg",
            "module.emr-logs-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-rootdir-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_hbase_config_script",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_json_config",
            "module.emr-spark.module.emr-cluster.aws_emr_cluster.emr-cluster",
            "module.emr-spark.module.emr-cluster.data.aws_s3_bucket_object.json_config",
            "module.emr-spark.module.emr-iam.aws_iam_instance_profile.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_service_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.emr_assume_role",
            "module.emr-spark.module.emr-sgs.aws_security_group.emr_managed_internal",
            "module.sg_vm_web.aws_security_group.security-groups-egress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-egress-sg",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_policy.emr_creator_minimal_policy",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emr_creator_policy_attachment",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emrfs_user_s3_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_caller_identity.current",
            "module.tamr-vm.module.aws-iam-policies.data.aws_iam_policy_document.emr_creator_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_region.current",
            "module.tamr-vm.module.aws-iam-role.aws_iam_instance_profile.tamr_user_instance_profile",
            "module.tamr-vm.module.aws-iam-role.aws_iam_role.tamr_user_iam_role",
            "module.tamr-vm.module.aws-iam-role.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.tamr-vm.module.tamr_instance.aws_instance.tamr-instance",
            "module.tamr-vm.module.tamr_instance.data.template_cloudinit_config.bootstrap-scripts",
            "module.tamr_networking.aws_network_acl.application_subnet",
            "module.tamr_networking.aws_network_acl.compute_subnet",
            "module.tamr_networking.aws_network_acl.data_subnets",
            "module.tamr_networking.aws_network_acl.load_balancing_subnets",
            "module.tamr_networking.aws_network_acl.public_subnets",
            "module.tamr_networking.aws_route_table_association.compute_subnet_rta",
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.data.aws_region.current",
            "module.tamr_networking.data.aws_route_table.application_subnet_rt",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.endpoints.aws_vpc_endpoint.this",
            "module.tamr_networking.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tamr_networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.tamr_networking.module.vpc.aws_customer_gateway.this",
            "module.tamr_networking.module.vpc.aws_db_subnet_group.database",
            "module.tamr_networking.module.vpc.aws_default_network_acl.this",
            "module.tamr_networking.module.vpc.aws_default_route_table.default",
            "module.tamr_networking.module.vpc.aws_default_security_group.this",
            "module.tamr_networking.module.vpc.aws_default_vpc.this",
            "module.tamr_networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.tamr_networking.module.vpc.aws_flow_log.this",
            "module.tamr_networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_nat_gateway.this",
            "module.tamr_networking.module.vpc.aws_network_acl.database",
            "module.tamr_networking.module.vpc.aws_network_acl.elasticache",
            "module.tamr_networking.module.vpc.aws_network_acl.intra",
            "module.tamr_networking.module.vpc.aws_network_acl.outpost",
            "module.tamr_networking.module.vpc.aws_network_acl.private",
            "module.tamr_networking.module.vpc.aws_network_acl.public",
            "module.tamr_networking.module.vpc.aws_network_acl.redshift",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.tamr_networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.tamr_networking.module.vpc.aws_route.database_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.database_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.database_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.private_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.private_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.tamr_networking.module.vpc.aws_route_table.database",
            "module.tamr_networking.module.vpc.aws_route_table.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_route_table.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.database",
            "module.tamr_networking.module.vpc.aws_route_table_association.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table_association.intra",
            "module.tamr_networking.module.vpc.aws_route_table_association.outpost",
            "module.tamr_networking.module.vpc.aws_route_table_association.private",
            "module.tamr_networking.module.vpc.aws_route_table_association.public",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift_public",
            "module.tamr_networking.module.vpc.aws_subnet.database",
            "module.tamr_networking.module.vpc.aws_subnet.elasticache",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_subnet.outpost",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_subnet.redshift",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        },
        {
          "index_key": "tamr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/tamr/66abb686ef200f12",
            "arn_suffix": "targetgroup/tamr/66abb686ef200f12",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/tamr/66abb686ef200f12",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tamr",
            "port": 9100,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "dependencies": [
            "data.aws_ami.tamr-vm",
            "data.aws_availability_zones.available",
            "data.aws_instances.masters",
            "data.template_file.install_nginx",
            "data.template_file.setup_dms",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-sg",
            "module.emr-logs-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-rootdir-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_hbase_config_script",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_json_config",
            "module.emr-spark.module.emr-cluster.aws_emr_cluster.emr-cluster",
            "module.emr-spark.module.emr-cluster.data.aws_s3_bucket_object.json_config",
            "module.emr-spark.module.emr-iam.aws_iam_instance_profile.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_service_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.emr_assume_role",
            "module.emr-spark.module.emr-sgs.aws_security_group.emr_managed_internal",
            "module.sg_vm_web.aws_security_group.security-groups-egress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-egress-sg",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_policy.emr_creator_minimal_policy",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emr_creator_policy_attachment",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emrfs_user_s3_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_caller_identity.current",
            "module.tamr-vm.module.aws-iam-policies.data.aws_iam_policy_document.emr_creator_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_region.current",
            "module.tamr-vm.module.aws-iam-role.aws_iam_instance_profile.tamr_user_instance_profile",
            "module.tamr-vm.module.aws-iam-role.aws_iam_role.tamr_user_iam_role",
            "module.tamr-vm.module.aws-iam-role.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.tamr-vm.module.tamr_instance.aws_instance.tamr-instance",
            "module.tamr-vm.module.tamr_instance.data.template_cloudinit_config.bootstrap-scripts",
            "module.tamr_networking.aws_network_acl.application_subnet",
            "module.tamr_networking.aws_network_acl.compute_subnet",
            "module.tamr_networking.aws_network_acl.data_subnets",
            "module.tamr_networking.aws_network_acl.load_balancing_subnets",
            "module.tamr_networking.aws_network_acl.public_subnets",
            "module.tamr_networking.aws_route_table_association.compute_subnet_rta",
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.data.aws_region.current",
            "module.tamr_networking.data.aws_route_table.application_subnet_rt",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.endpoints.aws_vpc_endpoint.this",
            "module.tamr_networking.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tamr_networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.tamr_networking.module.vpc.aws_customer_gateway.this",
            "module.tamr_networking.module.vpc.aws_db_subnet_group.database",
            "module.tamr_networking.module.vpc.aws_default_network_acl.this",
            "module.tamr_networking.module.vpc.aws_default_route_table.default",
            "module.tamr_networking.module.vpc.aws_default_security_group.this",
            "module.tamr_networking.module.vpc.aws_default_vpc.this",
            "module.tamr_networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.tamr_networking.module.vpc.aws_flow_log.this",
            "module.tamr_networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_nat_gateway.this",
            "module.tamr_networking.module.vpc.aws_network_acl.database",
            "module.tamr_networking.module.vpc.aws_network_acl.elasticache",
            "module.tamr_networking.module.vpc.aws_network_acl.intra",
            "module.tamr_networking.module.vpc.aws_network_acl.outpost",
            "module.tamr_networking.module.vpc.aws_network_acl.private",
            "module.tamr_networking.module.vpc.aws_network_acl.public",
            "module.tamr_networking.module.vpc.aws_network_acl.redshift",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.tamr_networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.tamr_networking.module.vpc.aws_route.database_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.database_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.database_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.private_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.private_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.tamr_networking.module.vpc.aws_route_table.database",
            "module.tamr_networking.module.vpc.aws_route_table.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_route_table.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.database",
            "module.tamr_networking.module.vpc.aws_route_table_association.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table_association.intra",
            "module.tamr_networking.module.vpc.aws_route_table_association.outpost",
            "module.tamr_networking.module.vpc.aws_route_table_association.private",
            "module.tamr_networking.module.vpc.aws_route_table_association.public",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift_public",
            "module.tamr_networking.module.vpc.aws_subnet.database",
            "module.tamr_networking.module.vpc.aws_subnet.elasticache",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_subnet.outpost",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_subnet.redshift",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attachments",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/dms/b7c4e61fee879f22-20211027133633295300000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/dms/b7c4e61fee879f22",
            "target_id": "i-047846b54e9fa5d9c"
          },
          "dependencies": [
            "data.aws_ami.tamr-vm",
            "data.aws_availability_zones.available",
            "data.aws_instances.masters",
            "data.template_file.install_nginx",
            "data.template_file.setup_dms",
            "module.alb.aws_lb_target_group.target_groups",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-sg",
            "module.emr-logs-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-rootdir-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_hbase_config_script",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_json_config",
            "module.emr-spark.module.emr-cluster.aws_emr_cluster.emr-cluster",
            "module.emr-spark.module.emr-cluster.data.aws_s3_bucket_object.json_config",
            "module.emr-spark.module.emr-iam.aws_iam_instance_profile.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_service_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.emr_assume_role",
            "module.emr-spark.module.emr-sgs.aws_security_group.emr_managed_internal",
            "module.sg_vm_web.aws_security_group.security-groups-egress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-egress-sg",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_policy.emr_creator_minimal_policy",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emr_creator_policy_attachment",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emrfs_user_s3_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_caller_identity.current",
            "module.tamr-vm.module.aws-iam-policies.data.aws_iam_policy_document.emr_creator_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_region.current",
            "module.tamr-vm.module.aws-iam-role.aws_iam_instance_profile.tamr_user_instance_profile",
            "module.tamr-vm.module.aws-iam-role.aws_iam_role.tamr_user_iam_role",
            "module.tamr-vm.module.aws-iam-role.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.tamr-vm.module.tamr_instance.aws_instance.tamr-instance",
            "module.tamr-vm.module.tamr_instance.data.template_cloudinit_config.bootstrap-scripts",
            "module.tamr_networking.aws_network_acl.application_subnet",
            "module.tamr_networking.aws_network_acl.compute_subnet",
            "module.tamr_networking.aws_network_acl.data_subnets",
            "module.tamr_networking.aws_network_acl.load_balancing_subnets",
            "module.tamr_networking.aws_network_acl.public_subnets",
            "module.tamr_networking.aws_route_table_association.compute_subnet_rta",
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.data.aws_region.current",
            "module.tamr_networking.data.aws_route_table.application_subnet_rt",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.endpoints.aws_vpc_endpoint.this",
            "module.tamr_networking.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tamr_networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.tamr_networking.module.vpc.aws_customer_gateway.this",
            "module.tamr_networking.module.vpc.aws_db_subnet_group.database",
            "module.tamr_networking.module.vpc.aws_default_network_acl.this",
            "module.tamr_networking.module.vpc.aws_default_route_table.default",
            "module.tamr_networking.module.vpc.aws_default_security_group.this",
            "module.tamr_networking.module.vpc.aws_default_vpc.this",
            "module.tamr_networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.tamr_networking.module.vpc.aws_flow_log.this",
            "module.tamr_networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_nat_gateway.this",
            "module.tamr_networking.module.vpc.aws_network_acl.database",
            "module.tamr_networking.module.vpc.aws_network_acl.elasticache",
            "module.tamr_networking.module.vpc.aws_network_acl.intra",
            "module.tamr_networking.module.vpc.aws_network_acl.outpost",
            "module.tamr_networking.module.vpc.aws_network_acl.private",
            "module.tamr_networking.module.vpc.aws_network_acl.public",
            "module.tamr_networking.module.vpc.aws_network_acl.redshift",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.tamr_networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.tamr_networking.module.vpc.aws_route.database_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.database_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.database_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.private_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.private_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.tamr_networking.module.vpc.aws_route_table.database",
            "module.tamr_networking.module.vpc.aws_route_table.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_route_table.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.database",
            "module.tamr_networking.module.vpc.aws_route_table_association.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table_association.intra",
            "module.tamr_networking.module.vpc.aws_route_table_association.outpost",
            "module.tamr_networking.module.vpc.aws_route_table_association.private",
            "module.tamr_networking.module.vpc.aws_route_table_association.public",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift_public",
            "module.tamr_networking.module.vpc.aws_subnet.database",
            "module.tamr_networking.module.vpc.aws_subnet.elasticache",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_subnet.outpost",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_subnet.redshift",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/ganglia/c250e5ec0d3865d9-20211027133633315600000009",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/ganglia/c250e5ec0d3865d9",
            "target_id": "i-0376771dd23b36593"
          },
          "dependencies": [
            "data.aws_ami.tamr-vm",
            "data.aws_availability_zones.available",
            "data.aws_instances.masters",
            "data.template_file.install_nginx",
            "data.template_file.setup_dms",
            "module.alb.aws_lb_target_group.target_groups",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-sg",
            "module.emr-logs-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-rootdir-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_hbase_config_script",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_json_config",
            "module.emr-spark.module.emr-cluster.aws_emr_cluster.emr-cluster",
            "module.emr-spark.module.emr-cluster.data.aws_s3_bucket_object.json_config",
            "module.emr-spark.module.emr-iam.aws_iam_instance_profile.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_service_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.emr_assume_role",
            "module.emr-spark.module.emr-sgs.aws_security_group.emr_managed_internal",
            "module.sg_vm_web.aws_security_group.security-groups-egress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-egress-sg",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_policy.emr_creator_minimal_policy",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emr_creator_policy_attachment",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emrfs_user_s3_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_caller_identity.current",
            "module.tamr-vm.module.aws-iam-policies.data.aws_iam_policy_document.emr_creator_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_region.current",
            "module.tamr-vm.module.aws-iam-role.aws_iam_instance_profile.tamr_user_instance_profile",
            "module.tamr-vm.module.aws-iam-role.aws_iam_role.tamr_user_iam_role",
            "module.tamr-vm.module.aws-iam-role.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.tamr-vm.module.tamr_instance.aws_instance.tamr-instance",
            "module.tamr-vm.module.tamr_instance.data.template_cloudinit_config.bootstrap-scripts",
            "module.tamr_networking.aws_network_acl.application_subnet",
            "module.tamr_networking.aws_network_acl.compute_subnet",
            "module.tamr_networking.aws_network_acl.data_subnets",
            "module.tamr_networking.aws_network_acl.load_balancing_subnets",
            "module.tamr_networking.aws_network_acl.public_subnets",
            "module.tamr_networking.aws_route_table_association.compute_subnet_rta",
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.data.aws_region.current",
            "module.tamr_networking.data.aws_route_table.application_subnet_rt",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.endpoints.aws_vpc_endpoint.this",
            "module.tamr_networking.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tamr_networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.tamr_networking.module.vpc.aws_customer_gateway.this",
            "module.tamr_networking.module.vpc.aws_db_subnet_group.database",
            "module.tamr_networking.module.vpc.aws_default_network_acl.this",
            "module.tamr_networking.module.vpc.aws_default_route_table.default",
            "module.tamr_networking.module.vpc.aws_default_security_group.this",
            "module.tamr_networking.module.vpc.aws_default_vpc.this",
            "module.tamr_networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.tamr_networking.module.vpc.aws_flow_log.this",
            "module.tamr_networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_nat_gateway.this",
            "module.tamr_networking.module.vpc.aws_network_acl.database",
            "module.tamr_networking.module.vpc.aws_network_acl.elasticache",
            "module.tamr_networking.module.vpc.aws_network_acl.intra",
            "module.tamr_networking.module.vpc.aws_network_acl.outpost",
            "module.tamr_networking.module.vpc.aws_network_acl.private",
            "module.tamr_networking.module.vpc.aws_network_acl.public",
            "module.tamr_networking.module.vpc.aws_network_acl.redshift",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.tamr_networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.tamr_networking.module.vpc.aws_route.database_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.database_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.database_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.private_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.private_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.tamr_networking.module.vpc.aws_route_table.database",
            "module.tamr_networking.module.vpc.aws_route_table.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_route_table.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.database",
            "module.tamr_networking.module.vpc.aws_route_table_association.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table_association.intra",
            "module.tamr_networking.module.vpc.aws_route_table_association.outpost",
            "module.tamr_networking.module.vpc.aws_route_table_association.private",
            "module.tamr_networking.module.vpc.aws_route_table_association.public",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift_public",
            "module.tamr_networking.module.vpc.aws_subnet.database",
            "module.tamr_networking.module.vpc.aws_subnet.elasticache",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_subnet.outpost",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_subnet.redshift",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/ganglia/c250e5ec0d3865d9-2021102713363372440000000c",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/ganglia/c250e5ec0d3865d9",
            "target_id": "i-05950c7ac5479b94b"
          },
          "dependencies": [
            "data.aws_ami.tamr-vm",
            "data.aws_availability_zones.available",
            "data.aws_instances.masters",
            "data.template_file.install_nginx",
            "data.template_file.setup_dms",
            "module.alb.aws_lb_target_group.target_groups",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-sg",
            "module.emr-logs-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-rootdir-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_hbase_config_script",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_json_config",
            "module.emr-spark.module.emr-cluster.aws_emr_cluster.emr-cluster",
            "module.emr-spark.module.emr-cluster.data.aws_s3_bucket_object.json_config",
            "module.emr-spark.module.emr-iam.aws_iam_instance_profile.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_service_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.emr_assume_role",
            "module.emr-spark.module.emr-sgs.aws_security_group.emr_managed_internal",
            "module.sg_vm_web.aws_security_group.security-groups-egress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-egress-sg",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_policy.emr_creator_minimal_policy",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emr_creator_policy_attachment",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emrfs_user_s3_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_caller_identity.current",
            "module.tamr-vm.module.aws-iam-policies.data.aws_iam_policy_document.emr_creator_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_region.current",
            "module.tamr-vm.module.aws-iam-role.aws_iam_instance_profile.tamr_user_instance_profile",
            "module.tamr-vm.module.aws-iam-role.aws_iam_role.tamr_user_iam_role",
            "module.tamr-vm.module.aws-iam-role.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.tamr-vm.module.tamr_instance.aws_instance.tamr-instance",
            "module.tamr-vm.module.tamr_instance.data.template_cloudinit_config.bootstrap-scripts",
            "module.tamr_networking.aws_network_acl.application_subnet",
            "module.tamr_networking.aws_network_acl.compute_subnet",
            "module.tamr_networking.aws_network_acl.data_subnets",
            "module.tamr_networking.aws_network_acl.load_balancing_subnets",
            "module.tamr_networking.aws_network_acl.public_subnets",
            "module.tamr_networking.aws_route_table_association.compute_subnet_rta",
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.data.aws_region.current",
            "module.tamr_networking.data.aws_route_table.application_subnet_rt",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.endpoints.aws_vpc_endpoint.this",
            "module.tamr_networking.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tamr_networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.tamr_networking.module.vpc.aws_customer_gateway.this",
            "module.tamr_networking.module.vpc.aws_db_subnet_group.database",
            "module.tamr_networking.module.vpc.aws_default_network_acl.this",
            "module.tamr_networking.module.vpc.aws_default_route_table.default",
            "module.tamr_networking.module.vpc.aws_default_security_group.this",
            "module.tamr_networking.module.vpc.aws_default_vpc.this",
            "module.tamr_networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.tamr_networking.module.vpc.aws_flow_log.this",
            "module.tamr_networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_nat_gateway.this",
            "module.tamr_networking.module.vpc.aws_network_acl.database",
            "module.tamr_networking.module.vpc.aws_network_acl.elasticache",
            "module.tamr_networking.module.vpc.aws_network_acl.intra",
            "module.tamr_networking.module.vpc.aws_network_acl.outpost",
            "module.tamr_networking.module.vpc.aws_network_acl.private",
            "module.tamr_networking.module.vpc.aws_network_acl.public",
            "module.tamr_networking.module.vpc.aws_network_acl.redshift",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.tamr_networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.tamr_networking.module.vpc.aws_route.database_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.database_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.database_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.private_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.private_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.tamr_networking.module.vpc.aws_route_table.database",
            "module.tamr_networking.module.vpc.aws_route_table.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_route_table.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.database",
            "module.tamr_networking.module.vpc.aws_route_table_association.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table_association.intra",
            "module.tamr_networking.module.vpc.aws_route_table_association.outpost",
            "module.tamr_networking.module.vpc.aws_route_table_association.private",
            "module.tamr_networking.module.vpc.aws_route_table_association.public",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift_public",
            "module.tamr_networking.module.vpc.aws_subnet.database",
            "module.tamr_networking.module.vpc.aws_subnet.elasticache",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_subnet.outpost",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_subnet.redshift",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/ganglia/c250e5ec0d3865d9-2021102713363339330000000b",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/ganglia/c250e5ec0d3865d9",
            "target_id": "i-020c5250eff37ddaa"
          },
          "dependencies": [
            "data.aws_ami.tamr-vm",
            "data.aws_availability_zones.available",
            "data.aws_instances.masters",
            "data.template_file.install_nginx",
            "data.template_file.setup_dms",
            "module.alb.aws_lb_target_group.target_groups",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-sg",
            "module.emr-logs-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-rootdir-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_hbase_config_script",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_json_config",
            "module.emr-spark.module.emr-cluster.aws_emr_cluster.emr-cluster",
            "module.emr-spark.module.emr-cluster.data.aws_s3_bucket_object.json_config",
            "module.emr-spark.module.emr-iam.aws_iam_instance_profile.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_service_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.emr_assume_role",
            "module.emr-spark.module.emr-sgs.aws_security_group.emr_managed_internal",
            "module.sg_vm_web.aws_security_group.security-groups-egress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-egress-sg",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_policy.emr_creator_minimal_policy",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emr_creator_policy_attachment",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emrfs_user_s3_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_caller_identity.current",
            "module.tamr-vm.module.aws-iam-policies.data.aws_iam_policy_document.emr_creator_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_region.current",
            "module.tamr-vm.module.aws-iam-role.aws_iam_instance_profile.tamr_user_instance_profile",
            "module.tamr-vm.module.aws-iam-role.aws_iam_role.tamr_user_iam_role",
            "module.tamr-vm.module.aws-iam-role.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.tamr-vm.module.tamr_instance.aws_instance.tamr-instance",
            "module.tamr-vm.module.tamr_instance.data.template_cloudinit_config.bootstrap-scripts",
            "module.tamr_networking.aws_network_acl.application_subnet",
            "module.tamr_networking.aws_network_acl.compute_subnet",
            "module.tamr_networking.aws_network_acl.data_subnets",
            "module.tamr_networking.aws_network_acl.load_balancing_subnets",
            "module.tamr_networking.aws_network_acl.public_subnets",
            "module.tamr_networking.aws_route_table_association.compute_subnet_rta",
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.data.aws_region.current",
            "module.tamr_networking.data.aws_route_table.application_subnet_rt",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.endpoints.aws_vpc_endpoint.this",
            "module.tamr_networking.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tamr_networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.tamr_networking.module.vpc.aws_customer_gateway.this",
            "module.tamr_networking.module.vpc.aws_db_subnet_group.database",
            "module.tamr_networking.module.vpc.aws_default_network_acl.this",
            "module.tamr_networking.module.vpc.aws_default_route_table.default",
            "module.tamr_networking.module.vpc.aws_default_security_group.this",
            "module.tamr_networking.module.vpc.aws_default_vpc.this",
            "module.tamr_networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.tamr_networking.module.vpc.aws_flow_log.this",
            "module.tamr_networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_nat_gateway.this",
            "module.tamr_networking.module.vpc.aws_network_acl.database",
            "module.tamr_networking.module.vpc.aws_network_acl.elasticache",
            "module.tamr_networking.module.vpc.aws_network_acl.intra",
            "module.tamr_networking.module.vpc.aws_network_acl.outpost",
            "module.tamr_networking.module.vpc.aws_network_acl.private",
            "module.tamr_networking.module.vpc.aws_network_acl.public",
            "module.tamr_networking.module.vpc.aws_network_acl.redshift",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.tamr_networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.tamr_networking.module.vpc.aws_route.database_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.database_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.database_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.private_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.private_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.tamr_networking.module.vpc.aws_route_table.database",
            "module.tamr_networking.module.vpc.aws_route_table.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_route_table.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.database",
            "module.tamr_networking.module.vpc.aws_route_table_association.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table_association.intra",
            "module.tamr_networking.module.vpc.aws_route_table_association.outpost",
            "module.tamr_networking.module.vpc.aws_route_table_association.private",
            "module.tamr_networking.module.vpc.aws_route_table_association.public",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift_public",
            "module.tamr_networking.module.vpc.aws_subnet.database",
            "module.tamr_networking.module.vpc.aws_subnet.elasticache",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_subnet.outpost",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_subnet.redshift",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        },
        {
          "index_key": "4",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/hbase/323d5bea025d6e83-2021102713363335550000000a",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/hbase/323d5bea025d6e83",
            "target_id": "i-0376771dd23b36593"
          },
          "dependencies": [
            "data.aws_ami.tamr-vm",
            "data.aws_availability_zones.available",
            "data.aws_instances.masters",
            "data.template_file.install_nginx",
            "data.template_file.setup_dms",
            "module.alb.aws_lb_target_group.target_groups",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-sg",
            "module.emr-logs-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-rootdir-bucket.module.encrypted-bucket.aws_s3_bucket.new_bucket",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_hbase_config_script",
            "module.emr-spark.module.emr-cluster-config.aws_s3_bucket_object.upload_json_config",
            "module.emr-spark.module.emr-cluster.aws_emr_cluster.emr-cluster",
            "module.emr-spark.module.emr-cluster.data.aws_s3_bucket_object.json_config",
            "module.emr-spark.module.emr-iam.aws_iam_instance_profile.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_ec2_instance_profile",
            "module.emr-spark.module.emr-iam.aws_iam_role.emr_service_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.emr-spark.module.emr-iam.data.aws_iam_policy_document.emr_assume_role",
            "module.emr-spark.module.emr-sgs.aws_security_group.emr_managed_internal",
            "module.sg_vm_web.aws_security_group.security-groups-egress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-egress-sg",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_policy.emr_creator_minimal_policy",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emr_creator_policy_attachment",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emrfs_user_s3_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_caller_identity.current",
            "module.tamr-vm.module.aws-iam-policies.data.aws_iam_policy_document.emr_creator_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_region.current",
            "module.tamr-vm.module.aws-iam-role.aws_iam_instance_profile.tamr_user_instance_profile",
            "module.tamr-vm.module.aws-iam-role.aws_iam_role.tamr_user_iam_role",
            "module.tamr-vm.module.aws-iam-role.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.tamr-vm.module.tamr_instance.aws_instance.tamr-instance",
            "module.tamr-vm.module.tamr_instance.data.template_cloudinit_config.bootstrap-scripts",
            "module.tamr_networking.aws_network_acl.application_subnet",
            "module.tamr_networking.aws_network_acl.compute_subnet",
            "module.tamr_networking.aws_network_acl.data_subnets",
            "module.tamr_networking.aws_network_acl.load_balancing_subnets",
            "module.tamr_networking.aws_network_acl.public_subnets",
            "module.tamr_networking.aws_route_table_association.compute_subnet_rta",
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.data.aws_region.current",
            "module.tamr_networking.data.aws_route_table.application_subnet_rt",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.endpoints.aws_vpc_endpoint.this",
            "module.tamr_networking.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tamr_networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.tamr_networking.module.vpc.aws_customer_gateway.this",
            "module.tamr_networking.module.vpc.aws_db_subnet_group.database",
            "module.tamr_networking.module.vpc.aws_default_network_acl.this",
            "module.tamr_networking.module.vpc.aws_default_route_table.default",
            "module.tamr_networking.module.vpc.aws_default_security_group.this",
            "module.tamr_networking.module.vpc.aws_default_vpc.this",
            "module.tamr_networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.tamr_networking.module.vpc.aws_flow_log.this",
            "module.tamr_networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_nat_gateway.this",
            "module.tamr_networking.module.vpc.aws_network_acl.database",
            "module.tamr_networking.module.vpc.aws_network_acl.elasticache",
            "module.tamr_networking.module.vpc.aws_network_acl.intra",
            "module.tamr_networking.module.vpc.aws_network_acl.outpost",
            "module.tamr_networking.module.vpc.aws_network_acl.private",
            "module.tamr_networking.module.vpc.aws_network_acl.public",
            "module.tamr_networking.module.vpc.aws_network_acl.redshift",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.tamr_networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.tamr_networking.module.vpc.aws_route.database_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.database_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.database_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.private_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.private_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.tamr_networking.module.vpc.aws_route_table.database",
            "module.tamr_networking.module.vpc.aws_route_table.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_route_table.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.database",
            "module.tamr_networking.module.vpc.aws_route_table_association.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table_association.intra",
            "module.tamr_networking.module.vpc.aws_route_table_association.outpost",
            "module.tamr_networking.module.vpc.aws_route_table_association.private",
            "module.tamr_networking.module.vpc.aws_route_table_association.public",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift_public",
            "module.tamr_networking.module.vpc.aws_subnet.database",
            "module.tamr_networking.module.vpc.aws_subnet.elasticache",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_subnet.outpost",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_subnet.redshift",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:loadbalancer/app/tamr-ssl-example/1ee9e34c472f8d18",
            "arn_suffix": "app/tamr-ssl-example/1ee9e34c472f8d18",
            "dns_name": "internal-tamr-ssl-example-1584228959.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-1:131578276461:loadbalancer/app/tamr-ssl-example/1ee9e34c472f8d18",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tamr-ssl-example",
            "security_groups": [
              "sg-0f5837e7f99f40f7b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d1745767495b720d"
              },
              {
                "subnet_id": "subnet-0de9b78c04aa25189"
              }
            ],
            "subnets": [
              "subnet-0d1745767495b720d",
              "subnet-0de9b78c04aa25189"
            ],
            "tags": {
              "Name": "tamr-ssl-example",
              "owner": "franco"
            },
            "tags_all": {
              "Name": "tamr-ssl-example",
              "owner": "franco"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-09ebec0ff9aa91a04",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:listener/app/tamr-ssl-example/1ee9e34c472f8d18/65f0c3c5a391b319",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:131578276461:listener/app/tamr-ssl-example/1ee9e34c472f8d18/65f0c3c5a391b319",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:loadbalancer/app/tamr-ssl-example/1ee9e34c472f8d18",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "owner": "franco"
            },
            "tags_all": {
              "owner": "franco"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ami.tamr-vm",
            "data.aws_availability_zones.available",
            "data.template_file.install_nginx",
            "data.template_file.setup_dms",
            "module.alb.module.alb.aws_lb.this",
            "module.alb.module.alb.aws_lb_target_group.main",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.sg_vm_web.aws_security_group.security-groups-egress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-egress-sg",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_policy.emr_creator_minimal_policy",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emr_creator_policy_attachment",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emrfs_user_s3_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_caller_identity.current",
            "module.tamr-vm.module.aws-iam-policies.data.aws_iam_policy_document.emr_creator_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_region.current",
            "module.tamr-vm.module.aws-iam-role.aws_iam_instance_profile.tamr_user_instance_profile",
            "module.tamr-vm.module.aws-iam-role.aws_iam_role.tamr_user_iam_role",
            "module.tamr-vm.module.aws-iam-role.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.tamr-vm.module.tamr_instance.aws_instance.tamr-instance",
            "module.tamr-vm.module.tamr_instance.data.template_cloudinit_config.bootstrap-scripts",
            "module.tamr_networking.aws_network_acl.application_subnet",
            "module.tamr_networking.aws_network_acl.compute_subnet",
            "module.tamr_networking.aws_network_acl.data_subnets",
            "module.tamr_networking.aws_network_acl.load_balancing_subnets",
            "module.tamr_networking.aws_network_acl.public_subnets",
            "module.tamr_networking.aws_route_table_association.compute_subnet_rta",
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.data.aws_region.current",
            "module.tamr_networking.data.aws_route_table.application_subnet_rt",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.endpoints.aws_vpc_endpoint.this",
            "module.tamr_networking.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tamr_networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.tamr_networking.module.vpc.aws_customer_gateway.this",
            "module.tamr_networking.module.vpc.aws_db_subnet_group.database",
            "module.tamr_networking.module.vpc.aws_default_network_acl.this",
            "module.tamr_networking.module.vpc.aws_default_route_table.default",
            "module.tamr_networking.module.vpc.aws_default_security_group.this",
            "module.tamr_networking.module.vpc.aws_default_vpc.this",
            "module.tamr_networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.tamr_networking.module.vpc.aws_flow_log.this",
            "module.tamr_networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_nat_gateway.this",
            "module.tamr_networking.module.vpc.aws_network_acl.database",
            "module.tamr_networking.module.vpc.aws_network_acl.elasticache",
            "module.tamr_networking.module.vpc.aws_network_acl.intra",
            "module.tamr_networking.module.vpc.aws_network_acl.outpost",
            "module.tamr_networking.module.vpc.aws_network_acl.private",
            "module.tamr_networking.module.vpc.aws_network_acl.public",
            "module.tamr_networking.module.vpc.aws_network_acl.redshift",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.tamr_networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.tamr_networking.module.vpc.aws_route.database_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.database_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.database_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.private_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.private_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.tamr_networking.module.vpc.aws_route_table.database",
            "module.tamr_networking.module.vpc.aws_route_table.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_route_table.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.database",
            "module.tamr_networking.module.vpc.aws_route_table_association.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table_association.intra",
            "module.tamr_networking.module.vpc.aws_route_table_association.outpost",
            "module.tamr_networking.module.vpc.aws_route_table_association.private",
            "module.tamr_networking.module.vpc.aws_route_table_association.public",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift_public",
            "module.tamr_networking.module.vpc.aws_subnet.database",
            "module.tamr_networking.module.vpc.aws_subnet.elasticache",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_subnet.outpost",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_subnet.redshift",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:listener/app/tamr-ssl-example/1ee9e34c472f8d18/de9e8d2848054ee8",
            "certificate_arn": "arn:aws:acm:us-west-1:131578276461:certificate/e2d0be40-13b8-4040-861d-54201630e663",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/tamr-default/2b1f8bc4d81fbec8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:131578276461:listener/app/tamr-ssl-example/1ee9e34c472f8d18/de9e8d2848054ee8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:loadbalancer/app/tamr-ssl-example/1ee9e34c472f8d18",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "owner": "franco"
            },
            "tags_all": {
              "owner": "franco"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ami.tamr-vm",
            "data.aws_availability_zones.available",
            "data.template_file.install_nginx",
            "data.template_file.setup_dms",
            "module.alb.module.alb.aws_lb.this",
            "module.alb.module.alb.aws_lb_target_group.main",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.sg_vm_web.aws_security_group.security-groups-egress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-egress-sg",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_policy.emr_creator_minimal_policy",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emr_creator_policy_attachment",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emrfs_user_s3_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_caller_identity.current",
            "module.tamr-vm.module.aws-iam-policies.data.aws_iam_policy_document.emr_creator_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_region.current",
            "module.tamr-vm.module.aws-iam-role.aws_iam_instance_profile.tamr_user_instance_profile",
            "module.tamr-vm.module.aws-iam-role.aws_iam_role.tamr_user_iam_role",
            "module.tamr-vm.module.aws-iam-role.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.tamr-vm.module.tamr_instance.aws_instance.tamr-instance",
            "module.tamr-vm.module.tamr_instance.data.template_cloudinit_config.bootstrap-scripts",
            "module.tamr_networking.aws_network_acl.application_subnet",
            "module.tamr_networking.aws_network_acl.compute_subnet",
            "module.tamr_networking.aws_network_acl.data_subnets",
            "module.tamr_networking.aws_network_acl.load_balancing_subnets",
            "module.tamr_networking.aws_network_acl.public_subnets",
            "module.tamr_networking.aws_route_table_association.compute_subnet_rta",
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.data.aws_region.current",
            "module.tamr_networking.data.aws_route_table.application_subnet_rt",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.endpoints.aws_vpc_endpoint.this",
            "module.tamr_networking.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tamr_networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.tamr_networking.module.vpc.aws_customer_gateway.this",
            "module.tamr_networking.module.vpc.aws_db_subnet_group.database",
            "module.tamr_networking.module.vpc.aws_default_network_acl.this",
            "module.tamr_networking.module.vpc.aws_default_route_table.default",
            "module.tamr_networking.module.vpc.aws_default_security_group.this",
            "module.tamr_networking.module.vpc.aws_default_vpc.this",
            "module.tamr_networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.tamr_networking.module.vpc.aws_flow_log.this",
            "module.tamr_networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_nat_gateway.this",
            "module.tamr_networking.module.vpc.aws_network_acl.database",
            "module.tamr_networking.module.vpc.aws_network_acl.elasticache",
            "module.tamr_networking.module.vpc.aws_network_acl.intra",
            "module.tamr_networking.module.vpc.aws_network_acl.outpost",
            "module.tamr_networking.module.vpc.aws_network_acl.private",
            "module.tamr_networking.module.vpc.aws_network_acl.public",
            "module.tamr_networking.module.vpc.aws_network_acl.redshift",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.tamr_networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.tamr_networking.module.vpc.aws_route.database_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.database_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.database_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.private_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.private_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.tamr_networking.module.vpc.aws_route_table.database",
            "module.tamr_networking.module.vpc.aws_route_table.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_route_table.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.database",
            "module.tamr_networking.module.vpc.aws_route_table_association.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table_association.intra",
            "module.tamr_networking.module.vpc.aws_route_table_association.outpost",
            "module.tamr_networking.module.vpc.aws_route_table_association.private",
            "module.tamr_networking.module.vpc.aws_route_table_association.public",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift_public",
            "module.tamr_networking.module.vpc.aws_subnet.database",
            "module.tamr_networking.module.vpc.aws_subnet.elasticache",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_subnet.outpost",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_subnet.redshift",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/tamr-default/2b1f8bc4d81fbec8",
            "arn_suffix": "targetgroup/tamr-default/2b1f8bc4d81fbec8",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/tamr-default/2b1f8bc4d81fbec8",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tamr-default",
            "port": 9100,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tamr-default",
              "owner": "franco"
            },
            "tags_all": {
              "Name": "tamr-default",
              "owner": "franco"
            },
            "target_type": "instance",
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "dependencies": [
            "data.aws_ami.tamr-vm",
            "data.aws_availability_zones.available",
            "data.template_file.install_nginx",
            "data.template_file.setup_dms",
            "module.alb.module.alb.aws_lb.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.sg_vm_web.aws_security_group.security-groups-egress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-egress-sg",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_policy.emr_creator_minimal_policy",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emr_creator_policy_attachment",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emrfs_user_s3_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_caller_identity.current",
            "module.tamr-vm.module.aws-iam-policies.data.aws_iam_policy_document.emr_creator_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_region.current",
            "module.tamr-vm.module.aws-iam-role.aws_iam_instance_profile.tamr_user_instance_profile",
            "module.tamr-vm.module.aws-iam-role.aws_iam_role.tamr_user_iam_role",
            "module.tamr-vm.module.aws-iam-role.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.tamr-vm.module.tamr_instance.aws_instance.tamr-instance",
            "module.tamr-vm.module.tamr_instance.data.template_cloudinit_config.bootstrap-scripts",
            "module.tamr_networking.aws_network_acl.application_subnet",
            "module.tamr_networking.aws_network_acl.compute_subnet",
            "module.tamr_networking.aws_network_acl.data_subnets",
            "module.tamr_networking.aws_network_acl.load_balancing_subnets",
            "module.tamr_networking.aws_network_acl.public_subnets",
            "module.tamr_networking.aws_route_table_association.compute_subnet_rta",
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.data.aws_region.current",
            "module.tamr_networking.data.aws_route_table.application_subnet_rt",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.endpoints.aws_vpc_endpoint.this",
            "module.tamr_networking.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tamr_networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.tamr_networking.module.vpc.aws_customer_gateway.this",
            "module.tamr_networking.module.vpc.aws_db_subnet_group.database",
            "module.tamr_networking.module.vpc.aws_default_network_acl.this",
            "module.tamr_networking.module.vpc.aws_default_route_table.default",
            "module.tamr_networking.module.vpc.aws_default_security_group.this",
            "module.tamr_networking.module.vpc.aws_default_vpc.this",
            "module.tamr_networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.tamr_networking.module.vpc.aws_flow_log.this",
            "module.tamr_networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_nat_gateway.this",
            "module.tamr_networking.module.vpc.aws_network_acl.database",
            "module.tamr_networking.module.vpc.aws_network_acl.elasticache",
            "module.tamr_networking.module.vpc.aws_network_acl.intra",
            "module.tamr_networking.module.vpc.aws_network_acl.outpost",
            "module.tamr_networking.module.vpc.aws_network_acl.private",
            "module.tamr_networking.module.vpc.aws_network_acl.public",
            "module.tamr_networking.module.vpc.aws_network_acl.redshift",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.tamr_networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.tamr_networking.module.vpc.aws_route.database_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.database_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.database_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.private_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.private_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.tamr_networking.module.vpc.aws_route_table.database",
            "module.tamr_networking.module.vpc.aws_route_table.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_route_table.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.database",
            "module.tamr_networking.module.vpc.aws_route_table_association.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table_association.intra",
            "module.tamr_networking.module.vpc.aws_route_table_association.outpost",
            "module.tamr_networking.module.vpc.aws_route_table_association.private",
            "module.tamr_networking.module.vpc.aws_route_table_association.public",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift_public",
            "module.tamr_networking.module.vpc.aws_subnet.database",
            "module.tamr_networking.module.vpc.aws_subnet.elasticache",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_subnet.outpost",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_subnet.redshift",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/tamr-default/2b1f8bc4d81fbec8-20211027132953238900000007",
            "port": 9100,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:131578276461:targetgroup/tamr-default/2b1f8bc4d81fbec8",
            "target_id": "i-047846b54e9fa5d9c"
          },
          "dependencies": [
            "data.aws_ami.tamr-vm",
            "data.aws_availability_zones.available",
            "data.template_file.install_nginx",
            "data.template_file.setup_dms",
            "module.alb.module.alb.aws_lb.this",
            "module.alb.module.alb.aws_lb_target_group.main",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.sg_vm_web.aws_security_group.security-groups-egress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-egress-sg",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_policy.emr_creator_minimal_policy",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emr_creator_policy_attachment",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emrfs_user_s3_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_caller_identity.current",
            "module.tamr-vm.module.aws-iam-policies.data.aws_iam_policy_document.emr_creator_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_region.current",
            "module.tamr-vm.module.aws-iam-role.aws_iam_instance_profile.tamr_user_instance_profile",
            "module.tamr-vm.module.aws-iam-role.aws_iam_role.tamr_user_iam_role",
            "module.tamr-vm.module.aws-iam-role.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.tamr-vm.module.tamr_instance.aws_instance.tamr-instance",
            "module.tamr-vm.module.tamr_instance.data.template_cloudinit_config.bootstrap-scripts",
            "module.tamr_networking.aws_network_acl.application_subnet",
            "module.tamr_networking.aws_network_acl.compute_subnet",
            "module.tamr_networking.aws_network_acl.data_subnets",
            "module.tamr_networking.aws_network_acl.load_balancing_subnets",
            "module.tamr_networking.aws_network_acl.public_subnets",
            "module.tamr_networking.aws_route_table_association.compute_subnet_rta",
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.data.aws_region.current",
            "module.tamr_networking.data.aws_route_table.application_subnet_rt",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.endpoints.aws_vpc_endpoint.this",
            "module.tamr_networking.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tamr_networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.tamr_networking.module.vpc.aws_customer_gateway.this",
            "module.tamr_networking.module.vpc.aws_db_subnet_group.database",
            "module.tamr_networking.module.vpc.aws_default_network_acl.this",
            "module.tamr_networking.module.vpc.aws_default_route_table.default",
            "module.tamr_networking.module.vpc.aws_default_security_group.this",
            "module.tamr_networking.module.vpc.aws_default_vpc.this",
            "module.tamr_networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.tamr_networking.module.vpc.aws_flow_log.this",
            "module.tamr_networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_nat_gateway.this",
            "module.tamr_networking.module.vpc.aws_network_acl.database",
            "module.tamr_networking.module.vpc.aws_network_acl.elasticache",
            "module.tamr_networking.module.vpc.aws_network_acl.intra",
            "module.tamr_networking.module.vpc.aws_network_acl.outpost",
            "module.tamr_networking.module.vpc.aws_network_acl.private",
            "module.tamr_networking.module.vpc.aws_network_acl.public",
            "module.tamr_networking.module.vpc.aws_network_acl.redshift",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.tamr_networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.tamr_networking.module.vpc.aws_route.database_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.database_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.database_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.private_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.private_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.tamr_networking.module.vpc.aws_route_table.database",
            "module.tamr_networking.module.vpc.aws_route_table.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_route_table.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.database",
            "module.tamr_networking.module.vpc.aws_route_table_association.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table_association.intra",
            "module.tamr_networking.module.vpc.aws_route_table_association.outpost",
            "module.tamr_networking.module.vpc.aws_route_table_association.private",
            "module.tamr_networking.module.vpc.aws_route_table_association.public",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift_public",
            "module.tamr_networking.module.vpc.aws_subnet.database",
            "module.tamr_networking.module.vpc.aws_subnet.elasticache",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_subnet.outpost",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_subnet.redshift",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.sg_https_lb.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:security-group/sg-0f5837e7f99f40f7b",
            "description": "Security group for tamr-vm with HTTPS ports open within VPC",
            "egress": [],
            "id": "sg-0f5837e7f99f40f7b",
            "ingress": [],
            "name": "web-20211027132638464000000004",
            "name_prefix": "web-",
            "owner_id": "131578276461",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web",
              "owner": "franco"
            },
            "tags_all": {
              "Name": "web",
              "owner": "franco"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb.module.sg_https_lb.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-4207633635",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f5837e7f99f40f7b",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.sg_https_lb.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Web from the load balancer",
            "from_port": 9100,
            "id": "sgrule-43653326",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f5837e7f99f40f7b",
            "self": false,
            "source_security_group_id": "sg-03cbfc14661a33b59",
            "to_port": 9100,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ami.tamr-vm",
            "data.aws_availability_zones.available",
            "data.template_file.install_nginx",
            "data.template_file.setup_dms",
            "module.alb.data.aws_instance.tamr-vm",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.sg_vm_web.aws_security_group.security-groups-egress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-egress-sg",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_policy.emr_creator_minimal_policy",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emr_creator_policy_attachment",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emrfs_user_s3_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_caller_identity.current",
            "module.tamr-vm.module.aws-iam-policies.data.aws_iam_policy_document.emr_creator_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_region.current",
            "module.tamr-vm.module.aws-iam-role.aws_iam_instance_profile.tamr_user_instance_profile",
            "module.tamr-vm.module.aws-iam-role.aws_iam_role.tamr_user_iam_role",
            "module.tamr-vm.module.aws-iam-role.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.tamr-vm.module.tamr_instance.aws_instance.tamr-instance",
            "module.tamr-vm.module.tamr_instance.data.template_cloudinit_config.bootstrap-scripts",
            "module.tamr_networking.aws_network_acl.application_subnet",
            "module.tamr_networking.aws_network_acl.compute_subnet",
            "module.tamr_networking.aws_network_acl.data_subnets",
            "module.tamr_networking.aws_network_acl.load_balancing_subnets",
            "module.tamr_networking.aws_network_acl.public_subnets",
            "module.tamr_networking.aws_route_table_association.compute_subnet_rta",
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.data.aws_region.current",
            "module.tamr_networking.data.aws_route_table.application_subnet_rt",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.endpoints.aws_vpc_endpoint.this",
            "module.tamr_networking.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tamr_networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.tamr_networking.module.vpc.aws_customer_gateway.this",
            "module.tamr_networking.module.vpc.aws_db_subnet_group.database",
            "module.tamr_networking.module.vpc.aws_default_network_acl.this",
            "module.tamr_networking.module.vpc.aws_default_route_table.default",
            "module.tamr_networking.module.vpc.aws_default_security_group.this",
            "module.tamr_networking.module.vpc.aws_default_vpc.this",
            "module.tamr_networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.tamr_networking.module.vpc.aws_flow_log.this",
            "module.tamr_networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_nat_gateway.this",
            "module.tamr_networking.module.vpc.aws_network_acl.database",
            "module.tamr_networking.module.vpc.aws_network_acl.elasticache",
            "module.tamr_networking.module.vpc.aws_network_acl.intra",
            "module.tamr_networking.module.vpc.aws_network_acl.outpost",
            "module.tamr_networking.module.vpc.aws_network_acl.private",
            "module.tamr_networking.module.vpc.aws_network_acl.public",
            "module.tamr_networking.module.vpc.aws_network_acl.redshift",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.tamr_networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.tamr_networking.module.vpc.aws_route.database_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.database_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.database_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.private_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.private_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.tamr_networking.module.vpc.aws_route_table.database",
            "module.tamr_networking.module.vpc.aws_route_table.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_route_table.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.database",
            "module.tamr_networking.module.vpc.aws_route_table_association.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table_association.intra",
            "module.tamr_networking.module.vpc.aws_route_table_association.outpost",
            "module.tamr_networking.module.vpc.aws_route_table_association.private",
            "module.tamr_networking.module.vpc.aws_route_table_association.public",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift_public",
            "module.tamr_networking.module.vpc.aws_subnet.database",
            "module.tamr_networking.module.vpc.aws_subnet.elasticache",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_subnet.outpost",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_subnet.redshift",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.sg_https_lb.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-2446875355",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f5837e7f99f40f7b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.sg_https_lb.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-3398285075",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f5837e7f99f40f7b",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-emr-sg-core",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-groups-egress-cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:security-group/sg-0a2a881b87c564d11",
            "description": "Egress security group for Tamr (CIDR)",
            "egress": [],
            "id": "sg-0a2a881b87c564d11",
            "ingress": [],
            "name": "example-complete--core-egress-cidr-0",
            "name_prefix": "",
            "owner_id": "131578276461",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-emr-sg-core",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-groups-ingress-cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:security-group/sg-0cf48756cb00743c2",
            "description": "Ingress security group for Tamr (CIDR)",
            "egress": [],
            "id": "sg-0cf48756cb00743c2",
            "ingress": [],
            "name": "example-complete--core-ingress-cidr-0",
            "name_prefix": "",
            "owner_id": "131578276461",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-emr-sg-core",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_cidr_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr egress CIDR rule 0",
            "from_port": 0,
            "id": "sgrule-533257184",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a2a881b87c564d11",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-core.aws_security_group.security-groups-egress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-emr-sg-core",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_cidr_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr ingress CIDR rule 0 for port 8042",
            "from_port": 8042,
            "id": "sgrule-2641328025",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cf48756cb00743c2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8042,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr ingress CIDR rule 1 for port 16020",
            "from_port": 16020,
            "id": "sgrule-4018485306",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cf48756cb00743c2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 16020,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr ingress CIDR rule 2 for port 16030",
            "from_port": 16030,
            "id": "sgrule-1156137189",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cf48756cb00743c2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 16030,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr ingress CIDR rule 3 for port 50010",
            "from_port": 50010,
            "id": "sgrule-1474836571",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cf48756cb00743c2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 50010,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr ingress CIDR rule 4 for port 50075",
            "from_port": 50075,
            "id": "sgrule-1067692619",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cf48756cb00743c2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 50075,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-core.aws_security_group.security-groups-ingress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-emr-sg-master",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-groups-egress-cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:security-group/sg-091e4c401d038bbc3",
            "description": "Egress security group for Tamr (CIDR)",
            "egress": [],
            "id": "sg-091e4c401d038bbc3",
            "ingress": [],
            "name": "example-complete--master-egress-cidr-0",
            "name_prefix": "",
            "owner_id": "131578276461",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-emr-sg-master",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-groups-ingress-cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:security-group/sg-0e95baf4e123de6c7",
            "description": "Ingress security group for Tamr (CIDR)",
            "egress": [],
            "id": "sg-0e95baf4e123de6c7",
            "ingress": [],
            "name": "example-complete--master-ingress-cidr-0",
            "name_prefix": "",
            "owner_id": "131578276461",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-emr-sg-master",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_cidr_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr egress CIDR rule 0",
            "from_port": 0,
            "id": "sgrule-1012525465",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-091e4c401d038bbc3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-master.aws_security_group.security-groups-egress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-emr-sg-master",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_cidr_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr ingress CIDR rule 0 for port 80",
            "from_port": 80,
            "id": "sgrule-3399708756",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e95baf4e123de6c7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr ingress CIDR rule 1 for port 2181",
            "from_port": 2181,
            "id": "sgrule-4104876985",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e95baf4e123de6c7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 2181,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr ingress CIDR rule 2 for port 8020",
            "from_port": 8020,
            "id": "sgrule-3353490766",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e95baf4e123de6c7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8020,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr ingress CIDR rule 3 for port 8070",
            "from_port": 8070,
            "id": "sgrule-1412923539",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e95baf4e123de6c7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8070,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr ingress CIDR rule 4 for port 8085",
            "from_port": 8085,
            "id": "sgrule-3883014200",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e95baf4e123de6c7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8085,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr ingress CIDR rule 5 for port 8088",
            "from_port": 8088,
            "id": "sgrule-1206493609",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e95baf4e123de6c7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8088,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr ingress CIDR rule 6 for port 8443",
            "from_port": 8443,
            "id": "sgrule-3378963462",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e95baf4e123de6c7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr ingress CIDR rule 7 for port 9090",
            "from_port": 9090,
            "id": "sgrule-1032140120",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e95baf4e123de6c7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9090,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr ingress CIDR rule 8 for port 9095",
            "from_port": 9095,
            "id": "sgrule-3788469717",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e95baf4e123de6c7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9095,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr ingress CIDR rule 9 for port 16000",
            "from_port": 16000,
            "id": "sgrule-3373544985",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e95baf4e123de6c7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 16000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr ingress CIDR rule 10 for port 16010",
            "from_port": 16010,
            "id": "sgrule-1652051654",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e95baf4e123de6c7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 16010,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr ingress CIDR rule 11 for port 18080",
            "from_port": 18080,
            "id": "sgrule-909216664",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e95baf4e123de6c7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 18080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr ingress CIDR rule 12 for port 19888",
            "from_port": 19888,
            "id": "sgrule-839465853",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e95baf4e123de6c7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 19888,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr ingress CIDR rule 13 for port 20888",
            "from_port": 20888,
            "id": "sgrule-2873627617",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e95baf4e123de6c7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 20888,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr ingress CIDR rule 14 for port 50070",
            "from_port": 50070,
            "id": "sgrule-2975588295",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e95baf4e123de6c7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 50070,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-master.aws_security_group.security-groups-ingress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-emr-sg-service-access",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-groups-egress-cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:security-group/sg-077849fd1eaff1b07",
            "description": "Egress security group for Tamr (CIDR)",
            "egress": [],
            "id": "sg-077849fd1eaff1b07",
            "ingress": [],
            "name": "example-complete--service-access-egress-cidr-0",
            "name_prefix": "",
            "owner_id": "131578276461",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-emr-sg-service-access",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-groups-ingress-cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:security-group/sg-09c6d4fa12fab039f",
            "description": "Ingress security group for Tamr (CIDR)",
            "egress": [],
            "id": "sg-09c6d4fa12fab039f",
            "ingress": [],
            "name": "example-complete--service-access-ingress-cidr-0",
            "name_prefix": "",
            "owner_id": "131578276461",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-emr-sg-service-access",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_cidr_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr egress CIDR rule 0",
            "from_port": 0,
            "id": "sgrule-587670949",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-077849fd1eaff1b07",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-emr-sg-service-access",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_cidr_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr ingress CIDR rule 0 for port 22",
            "from_port": 22,
            "id": "sgrule-1383059835",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09c6d4fa12fab039f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr ingress CIDR rule 1 for port 9443",
            "from_port": 9443,
            "id": "sgrule-1122407637",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09c6d4fa12fab039f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.emr-spark.module.emr-sgs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_managed_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:security-group/sg-06193addb36ad0ed2",
            "description": "EMR Managed Security Group",
            "egress": [],
            "id": "sg-06193addb36ad0ed2",
            "ingress": [],
            "name": "TAMR-EMR-Internal",
            "name_prefix": "",
            "owner_id": "131578276461",
            "revoke_rules_on_delete": true,
            "tags": {
              "owner": "franco"
            },
            "tags_all": {
              "owner": "franco"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.emr-spark.module.emr-sgs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_ports_for_internal_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Combined TCP/UDP/ICMP",
            "from_port": 0,
            "id": "sgrule-2807025710",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06193addb36ad0ed2",
            "self": false,
            "source_security_group_id": "sg-06193addb36ad0ed2",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.emr-spark.module.emr-sgs.aws_security_group.emr_managed_internal",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.emr-spark.module.emr-sgs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_for_internal_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress rule for EMR Managed Internal SG",
            "from_port": 0,
            "id": "sgrule-635396700",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06193addb36ad0ed2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.emr-spark.module.emr-sgs.aws_security_group.emr_managed_internal",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.emr-spark.module.emr-sgs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "service_access_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress on port 9443 from the master sg",
            "from_port": 9443,
            "id": "sgrule-3470368278",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09c6d4fa12fab039f",
            "self": false,
            "source_security_group_id": "sg-06193addb36ad0ed2",
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-sg",
            "module.emr-spark.module.emr-sgs.aws_security_group.emr_managed_internal",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress on port 9443 from the master sg",
            "from_port": 9443,
            "id": "sgrule-2444637409",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-077849fd1eaff1b07",
            "self": false,
            "source_security_group_id": "sg-06193addb36ad0ed2",
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-egress-sg",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-cidr",
            "module.aws-emr-sg-service-access.aws_security_group.security-groups-ingress-sg",
            "module.emr-spark.module.emr-sgs.aws_security_group.emr_managed_internal",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg_vm_web",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-groups-egress-cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:security-group/sg-03cbfc14661a33b59",
            "description": "Egress security group for Tamr (CIDR)",
            "egress": [],
            "id": "sg-03cbfc14661a33b59",
            "ingress": [],
            "name": "example-complete-tamr-vm-egress-cidr-0",
            "name_prefix": "",
            "owner_id": "131578276461",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg_vm_web",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-groups-ingress-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:security-group/sg-05085835d823ab597",
            "description": "Ingress security group for Tamr (SG)",
            "egress": [],
            "id": "sg-05085835d823ab597",
            "ingress": [],
            "name": "example-complete-tamr-vm-ingress-sg-0",
            "name_prefix": "",
            "owner_id": "131578276461",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg_vm_web",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_cidr_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tamr egress CIDR rule 0",
            "from_port": 0,
            "id": "sgrule-1731503431",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03cbfc14661a33b59",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_vm_web.aws_security_group.security-groups-egress-cidr",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg_vm_web",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_sg_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Tamr ingress SG rule 0 for port 9100",
            "from_port": 9100,
            "id": "sgrule-1285855565",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05085835d823ab597",
            "self": false,
            "source_security_group_id": "sg-0f5837e7f99f40f7b",
            "to_port": 9100,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Tamr ingress SG rule 1 for port 9155",
            "from_port": 9155,
            "id": "sgrule-3116373981",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05085835d823ab597",
            "self": false,
            "source_security_group_id": "sg-0f5837e7f99f40f7b",
            "to_port": 9155,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tamr-vm.module.tamr_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "tamr-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c642cafba927bde2",
            "arn": "arn:aws:ec2:us-west-1:131578276461:instance/i-047846b54e9fa5d9c",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "tamr--tamr-ec2-instance-profile",
            "id": "i-047846b54e9fa5d9c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "r5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "tamr-vm-test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e9869f115c675a8f",
            "private_dns": "ip-10-0-0-195.us-west-1.compute.internal",
            "private_ip": "10.0.0.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 300,
                "kms_key_id": "arn:aws:kms:us-west-1:131578276461:key/5d89e4a2-e049-41a7-a83a-0add63e61aca",
                "throughput": 0,
                "volume_id": "vol-04ac157e480439d63",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b81188e3083264d",
            "tags": {
              "Author": "Tamr",
              "Name": "Tamr VM",
              "owner": "franco"
            },
            "tags_all": {
              "Author": "Tamr",
              "Name": "Tamr VM",
              "owner": "franco"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03cbfc14661a33b59",
              "sg-05085835d823ab597"
            ]
          },
          "dependencies": [
            "data.aws_ami.tamr-vm",
            "data.aws_availability_zones.available",
            "data.template_file.install_nginx",
            "data.template_file.setup_dms",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this",
            "module.alb.module.sg_https_lb.module.sg.aws_security_group.this_name_prefix",
            "module.sg_vm_web.aws_security_group.security-groups-egress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-egress-sg",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-cidr",
            "module.sg_vm_web.aws_security_group.security-groups-ingress-sg",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_policy.emr_creator_minimal_policy",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emr_creator_policy_attachment",
            "module.tamr-vm.module.aws-iam-policies.aws_iam_role_policy_attachment.emrfs_user_s3_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_caller_identity.current",
            "module.tamr-vm.module.aws-iam-policies.data.aws_iam_policy_document.emr_creator_policy",
            "module.tamr-vm.module.aws-iam-policies.data.aws_region.current",
            "module.tamr-vm.module.aws-iam-role.aws_iam_instance_profile.tamr_user_instance_profile",
            "module.tamr-vm.module.aws-iam-role.aws_iam_role.tamr_user_iam_role",
            "module.tamr-vm.module.aws-iam-role.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.tamr-vm.module.tamr_instance.data.template_cloudinit_config.bootstrap-scripts",
            "module.tamr_networking.aws_network_acl.application_subnet",
            "module.tamr_networking.aws_network_acl.compute_subnet",
            "module.tamr_networking.aws_network_acl.data_subnets",
            "module.tamr_networking.aws_network_acl.load_balancing_subnets",
            "module.tamr_networking.aws_network_acl.public_subnets",
            "module.tamr_networking.aws_route_table_association.compute_subnet_rta",
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.data.aws_region.current",
            "module.tamr_networking.data.aws_route_table.application_subnet_rt",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.endpoints.aws_vpc_endpoint.this",
            "module.tamr_networking.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tamr_networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.tamr_networking.module.vpc.aws_customer_gateway.this",
            "module.tamr_networking.module.vpc.aws_db_subnet_group.database",
            "module.tamr_networking.module.vpc.aws_default_network_acl.this",
            "module.tamr_networking.module.vpc.aws_default_route_table.default",
            "module.tamr_networking.module.vpc.aws_default_security_group.this",
            "module.tamr_networking.module.vpc.aws_default_vpc.this",
            "module.tamr_networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.tamr_networking.module.vpc.aws_flow_log.this",
            "module.tamr_networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_nat_gateway.this",
            "module.tamr_networking.module.vpc.aws_network_acl.database",
            "module.tamr_networking.module.vpc.aws_network_acl.elasticache",
            "module.tamr_networking.module.vpc.aws_network_acl.intra",
            "module.tamr_networking.module.vpc.aws_network_acl.outpost",
            "module.tamr_networking.module.vpc.aws_network_acl.private",
            "module.tamr_networking.module.vpc.aws_network_acl.public",
            "module.tamr_networking.module.vpc.aws_network_acl.redshift",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.tamr_networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.tamr_networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.tamr_networking.module.vpc.aws_route.database_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.database_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.database_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.private_ipv6_egress",
            "module.tamr_networking.module.vpc.aws_route.private_nat_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway",
            "module.tamr_networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.tamr_networking.module.vpc.aws_route_table.database",
            "module.tamr_networking.module.vpc.aws_route_table.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_route_table.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.database",
            "module.tamr_networking.module.vpc.aws_route_table_association.elasticache",
            "module.tamr_networking.module.vpc.aws_route_table_association.intra",
            "module.tamr_networking.module.vpc.aws_route_table_association.outpost",
            "module.tamr_networking.module.vpc.aws_route_table_association.private",
            "module.tamr_networking.module.vpc.aws_route_table_association.public",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift",
            "module.tamr_networking.module.vpc.aws_route_table_association.redshift_public",
            "module.tamr_networking.module.vpc.aws_subnet.database",
            "module.tamr_networking.module.vpc.aws_subnet.elasticache",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_subnet.outpost",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_subnet.redshift",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.tamr_networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.tamr_networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.tamr_networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking",
      "mode": "data",
      "type": "aws_route_table",
      "name": "application_subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:route-table/rtb-0532d0c81de1ac803",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0ac47b5b468c568c0",
                "route_table_id": "rtb-0532d0c81de1ac803",
                "subnet_id": "subnet-0d1745767495b720d"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0f88223a9b6579d14",
                "route_table_id": "rtb-0532d0c81de1ac803",
                "subnet_id": "subnet-06b81188e3083264d"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0b263f67b69f5f180",
                "route_table_id": "rtb-0532d0c81de1ac803",
                "subnet_id": "subnet-0de9b78c04aa25189"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-0532d0c81de1ac803",
            "owner_id": "131578276461",
            "route_table_id": "rtb-0532d0c81de1ac803",
            "routes": [],
            "subnet_id": "subnet-06b81188e3083264d",
            "tags": {
              "Name": "tamr-vpc-private",
              "owner": "franco"
            },
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.tamr_networking",
      "mode": "data",
      "type": "aws_subnet",
      "name": "application_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:subnet/subnet-06b81188e3083264d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.0.0/24",
            "default_for_az": false,
            "id": "subnet-06b81188e3083264d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "131578276461",
            "state": "available",
            "tags": {
              "Name": "tamr-vpc-private-us-west-1a",
              "owner": "franco"
            },
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          }
        }
      ]
    },
    {
      "module": "module.tamr_networking",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "application_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:network-acl/acl-01fe0956cef066f7d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 201,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 401,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-01fe0956cef066f7d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 202,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "3.101.163.64/28",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 420,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "3.101.163.80/28",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 421,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "3.101.163.96/28",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 422,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "3.5.160.0/22",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 423,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "52.219.112.0/21",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 424,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "52.219.120.0/22",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 425,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "52.219.192.0/23",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 426,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "52.219.194.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 427,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "52.219.24.0/21",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 428,
                "to_port": 65535
              }
            ],
            "owner_id": "131578276461",
            "subnet_ids": [
              "subnet-06b81188e3083264d"
            ],
            "tags": {
              "owner": "franco"
            },
            "tags_all": {
              "owner": "franco"
            },
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "compute_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:network-acl/acl-0b927ff5c6ebfe5ae",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 201,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b927ff5c6ebfe5ae",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "3.101.163.64/28",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 220,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "3.101.163.80/28",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 221,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "3.101.163.96/28",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 222,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "3.5.160.0/22",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 223,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "52.219.112.0/21",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 224,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "52.219.120.0/22",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 225,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "52.219.192.0/23",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 226,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "52.219.194.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 227,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "52.219.24.0/21",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 228,
                "to_port": 65535
              }
            ],
            "owner_id": "131578276461",
            "subnet_ids": [
              "subnet-0b126f4580f7a4088"
            ],
            "tags": {
              "owner": "franco"
            },
            "tags_all": {
              "owner": "franco"
            },
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_ip_ranges.s3_cidrs",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "data_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:network-acl/acl-0116081ab6491f27b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0116081ab6491f27b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "10.0.6.0/24",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "deny",
                "cidr_block": "10.0.7.0/24",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 201,
                "to_port": 65535
              }
            ],
            "owner_id": "131578276461",
            "subnet_ids": [
              "subnet-01bfc58da54a69859",
              "subnet-055e1a33e784ef727"
            ],
            "tags": {
              "owner": "franco"
            },
            "tags_all": {
              "owner": "franco"
            },
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "load_balancing_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:network-acl/acl-0e30766da29b623a3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-0e30766da29b623a3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 110,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 201,
                "to_port": 0
              }
            ],
            "owner_id": "131578276461",
            "subnet_ids": [
              "subnet-0d1745767495b720d",
              "subnet-0de9b78c04aa25189"
            ],
            "tags": {
              "owner": "franco"
            },
            "tags_all": {
              "owner": "franco"
            },
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:network-acl/acl-07b7604db39944cfb",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 301,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-07b7604db39944cfb",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 110,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 201,
                "to_port": 0
              }
            ],
            "owner_id": "131578276461",
            "subnet_ids": [
              "subnet-054aefea9cc154777",
              "subnet-0836e8614915fc031"
            ],
            "tags": {
              "owner": "franco"
            },
            "tags_all": {
              "owner": "franco"
            },
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "compute_subnet_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0924a47cc40c92ce0",
            "route_table_id": "rtb-0532d0c81de1ac803",
            "subnet_id": "subnet-0b126f4580f7a4088"
          },
          "dependencies": [
            "module.tamr_networking.aws_subnet.compute_subnet",
            "module.tamr_networking.data.aws_route_table.application_subnet_rt",
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "compute_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:subnet/subnet-0b126f4580f7a4088",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b126f4580f7a4088",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "131578276461",
            "tags": {
              "owner": "franco"
            },
            "tags_all": {
              "owner": "franco"
            },
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "dependencies": [
            "module.tamr_networking.data.aws_subnet.application_subnet",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking.module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:vpc-endpoint/vpce-0df41e21c0cd55350",
            "cidr_blocks": [
              "52.219.120.0/22",
              "52.219.24.0/21",
              "52.219.112.0/21",
              "3.5.160.0/22"
            ],
            "id": "vpce-0df41e21c0cd55350",
            "owner_id": "131578276461",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ba54002",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0532d0c81de1ac803"
            ],
            "service_name": "com.amazonaws.us-west-1.s3",
            "state": "available",
            "tags": {
              "Name": "s3-vpc-endpoint",
              "owner": "franco"
            },
            "tags_all": {
              "Name": "s3-vpc-endpoint",
              "owner": "franco"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "dependencies": [
            "module.tamr_networking.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:route-table/rtb-00f62d7ceb7f33870",
            "default_route_table_id": "rtb-00f62d7ceb7f33870",
            "id": "rtb-00f62d7ceb7f33870",
            "owner_id": "131578276461",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "tamr-vpc",
              "owner": "franco"
            },
            "tags_all": {
              "Name": "tamr-vpc",
              "owner": "franco"
            },
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-01324d1d",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-3-101-8-234.us-west-1.compute.amazonaws.com",
            "public_ip": "3.101.8.234",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tamr-vpc-us-west-1a",
              "owner": "franco"
            },
            "tags_all": {
              "Name": "tamr-vpc-us-west-1a",
              "owner": "franco"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:internet-gateway/igw-031290970428a364a",
            "id": "igw-031290970428a364a",
            "owner_id": "131578276461",
            "tags": {
              "Name": "tamr-vpc",
              "owner": "franco"
            },
            "tags_all": {
              "Name": "tamr-vpc",
              "owner": "franco"
            },
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01324d1d",
            "connectivity_type": "public",
            "id": "nat-03277708685cb3e1d",
            "network_interface_id": "eni-00cbbb0317555e099",
            "private_ip": "10.0.6.138",
            "public_ip": "3.101.8.234",
            "subnet_id": "subnet-054aefea9cc154777",
            "tags": {
              "Name": "tamr-vpc-us-west-1a",
              "owner": "franco"
            },
            "tags_all": {
              "Name": "tamr-vpc-us-west-1a",
              "owner": "franco"
            }
          },
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0532d0c81de1ac8031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03277708685cb3e1d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0532d0c81de1ac803",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_eip.nat",
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_nat_gateway.this",
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-031290970428a364a",
            "id": "r-rtb-03830422f5f3b97001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03830422f5f3b9700",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_internet_gateway.this",
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:route-table/rtb-0c4277860f9fa46c3",
            "id": "rtb-0c4277860f9fa46c3",
            "owner_id": "131578276461",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tamr-vpc-intra",
              "owner": "franco"
            },
            "tags_all": {
              "Name": "tamr-vpc-intra",
              "owner": "franco"
            },
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:route-table/rtb-0532d0c81de1ac803",
            "id": "rtb-0532d0c81de1ac803",
            "owner_id": "131578276461",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tamr-vpc-private",
              "owner": "franco"
            },
            "tags_all": {
              "Name": "tamr-vpc-private",
              "owner": "franco"
            },
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:route-table/rtb-03830422f5f3b9700",
            "id": "rtb-03830422f5f3b9700",
            "owner_id": "131578276461",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tamr-vpc-public",
              "owner": "franco"
            },
            "tags_all": {
              "Name": "tamr-vpc-public",
              "owner": "franco"
            },
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef39664b9c81409a",
            "route_table_id": "rtb-0c4277860f9fa46c3",
            "subnet_id": "subnet-01bfc58da54a69859"
          },
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0830f9055c641271b",
            "route_table_id": "rtb-0c4277860f9fa46c3",
            "subnet_id": "subnet-055e1a33e784ef727"
          },
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_route_table.intra",
            "module.tamr_networking.module.vpc.aws_subnet.intra",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f88223a9b6579d14",
            "route_table_id": "rtb-0532d0c81de1ac803",
            "subnet_id": "subnet-06b81188e3083264d"
          },
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b263f67b69f5f180",
            "route_table_id": "rtb-0532d0c81de1ac803",
            "subnet_id": "subnet-0de9b78c04aa25189"
          },
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac47b5b468c568c0",
            "route_table_id": "rtb-0532d0c81de1ac803",
            "subnet_id": "subnet-0d1745767495b720d"
          },
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_route_table.private",
            "module.tamr_networking.module.vpc.aws_subnet.private",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cb573c4c00f6cb8",
            "route_table_id": "rtb-03830422f5f3b9700",
            "subnet_id": "subnet-054aefea9cc154777"
          },
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3aee488b5c780c6",
            "route_table_id": "rtb-03830422f5f3b9700",
            "subnet_id": "subnet-0836e8614915fc031"
          },
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_route_table.public",
            "module.tamr_networking.module.vpc.aws_subnet.public",
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:subnet/subnet-01bfc58da54a69859",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-01bfc58da54a69859",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "131578276461",
            "tags": {
              "Name": "tamr-vpc-intra-us-west-1a",
              "owner": "franco"
            },
            "tags_all": {
              "Name": "tamr-vpc-intra-us-west-1a",
              "owner": "franco"
            },
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:subnet/subnet-055e1a33e784ef727",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-055e1a33e784ef727",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "131578276461",
            "tags": {
              "Name": "tamr-vpc-intra-us-west-1b",
              "owner": "franco"
            },
            "tags_all": {
              "Name": "tamr-vpc-intra-us-west-1b",
              "owner": "franco"
            },
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:subnet/subnet-06b81188e3083264d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-06b81188e3083264d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "131578276461",
            "tags": {
              "Name": "tamr-vpc-private-us-west-1a",
              "owner": "franco"
            },
            "tags_all": {
              "Name": "tamr-vpc-private-us-west-1a",
              "owner": "franco"
            },
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:subnet/subnet-0de9b78c04aa25189",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0de9b78c04aa25189",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "131578276461",
            "tags": {
              "Name": "tamr-vpc-private-us-west-1b",
              "owner": "franco"
            },
            "tags_all": {
              "Name": "tamr-vpc-private-us-west-1b",
              "owner": "franco"
            },
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:subnet/subnet-0d1745767495b720d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0d1745767495b720d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "131578276461",
            "tags": {
              "Name": "tamr-vpc-private-us-west-1a",
              "owner": "franco"
            },
            "tags_all": {
              "Name": "tamr-vpc-private-us-west-1a",
              "owner": "franco"
            },
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:subnet/subnet-054aefea9cc154777",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-054aefea9cc154777",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "131578276461",
            "tags": {
              "Name": "tamr-vpc-public-us-west-1a",
              "owner": "franco"
            },
            "tags_all": {
              "Name": "tamr-vpc-public-us-west-1a",
              "owner": "franco"
            },
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:subnet/subnet-0836e8614915fc031",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-0836e8614915fc031",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "131578276461",
            "tags": {
              "Name": "tamr-vpc-public-us-west-1b",
              "owner": "franco"
            },
            "tags_all": {
              "Name": "tamr-vpc-public-us-west-1b",
              "owner": "franco"
            },
            "vpc_id": "vpc-09ebec0ff9aa91a04"
          },
          "dependencies": [
            "module.tamr_networking.module.vpc.aws_vpc.this",
            "module.tamr_networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tamr_networking.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131578276461:vpc/vpc-09ebec0ff9aa91a04",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0254497d8b9251440",
            "default_route_table_id": "rtb-00f62d7ceb7f33870",
            "default_security_group_id": "sg-0c1725f501cdd8494",
            "dhcp_options_id": "dopt-84c239e1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09ebec0ff9aa91a04",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00f62d7ceb7f33870",
            "owner_id": "131578276461",
            "tags": {
              "Name": "tamr-vpc",
              "owner": "franco"
            },
            "tags_all": {
              "Name": "tamr-vpc",
              "owner": "franco"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}